--- a/sonichq/emuzone/.stillhere.html
+++ b/sonichq/emuzone/.stillhere.html
@@ -12,7 +12,7 @@
 </NOSCRIPT>
 </IFRAME>
 <!-- End of adMonitor v3.0 rich content tags --><BR>
-We're over at <A HREF="/sonichq/main/index.html">sonichq.org</A> now.  Please
+We're over at <A HREF="/sonichq">sonichq.org</A> now.  Please
 update your bookmarks accordingly.<P><BR>
 Thank you.
 
