--- a/sonichq/emuzone/comics/intro.html
+++ b/sonichq/emuzone/comics/intro.html
@@ -4,11 +4,11 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#000000" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffcc00" ALINK="#33cc66" background="http://www.emulationzone.org/sonichq/comics/images/4045.gif" bgproperties=fixed>
+<body bgcolor="#000000" TEXT="#ffffff" LINK="#ffcc00" VLINK="#ffcc00" ALINK="#33cc66" background="/sonichq/emuzone/comics/images/4045.gif" bgproperties=fixed>
 
 <center><table VALIGN=top BORDER=3 CELLSPACING=2 CELLPADDING=1 width=100% bordercolor=0000CC>
 <td valign=center>
-<center> <IMG SRC="http://www.emulationzone.org/sonichq/comics/images/advleft.jpg" alt="Sonic The Hedgehog - The Comics Adventure!"></a></b>
+<center> <IMG SRC="/sonichq/emuzone/comics/images/advleft.jpg" alt="Sonic The Hedgehog - The Comics Adventure!"></a></b>
 </a></b></center>
 </td><td valign=center>
 
@@ -17,17 +17,17 @@
 <TR>
 <TD>
 <center>
-<IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic25.jpg" 
+<IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic25.jpg" 
 alt="Sonic #25">
 </TD>
 <TD>
 <center>
-<IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic50.jpg" 
+<IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic50.jpg" 
 alt="Sonic #50">
 </TD>
 <TD>
 <center>
-<IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic75.jpg" 
+<IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic75.jpg" 
 alt="Sonic #75">
 </TD>
 </TR></TABLE>
@@ -45,13 +45,13 @@ the Sonic genre!
 </center>
 <p>
 <center>
-<embed src="http://www.geocities.com/EnchantedForest/Tower/4309/flashman.mid" autostart="true" loop="true" controls=smallconsole width=50 height=30><br>Flash Man Mix<p>
+<embed src="/sonichq/geocities/EnchantedForest/Tower/4309/flashman.mid" autostart="true" loop="true" controls=smallconsole width=50 height=30><br>Flash Man Mix<p>
 </font></center>
 <br>
 
 
 </td><td valign=center>
-<center> <IMG SRC="http://www.emulationzone.org/sonichq/comics/images/advright.jpg" alt="Sonic The Hedgehog - The Comics Adventure"></a></b>
+<center> <IMG SRC="/sonichq/emuzone/comics/images/advright.jpg" alt="Sonic The Hedgehog - The Comics Adventure"></a></b>
 </a></b></center>
 </td></tr></table></center>
 
@@ -65,7 +65,7 @@ the Sonic genre!
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#990000"> <font face="Arial"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> The Comics Connection <img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> The Comics Connection <img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
@@ -75,13 +75,13 @@ the Sonic genre!
 <br><br>
 <center><table ALIGN=CENTER BORDER=2 CELLSPACING=0 bordercolor=0000CC>
 <td valign=center>
-<center> <IMG SRC="http://www.emulationzone.org/sonichq/images/sonthen.jpg" alt="The Freedom Fighters - Before Robotnik"></a></b>
+<center> <IMG SRC="/sonichq/emuzone/images/sonthen.jpg" alt="The Freedom Fighters - Before Robotnik"></a></b>
 </a></b></center>
 </td><td valign=center>
-<center> <IMG SRC="http://www.emulationzone.org/sonichq/images/s51.jpg" alt="The Freedom Fighters - During Robotnik"></a></b>
+<center> <IMG SRC="/sonichq/emuzone/images/s51.jpg" alt="The Freedom Fighters - During Robotnik"></a></b>
 </a></b></center>
 </td><td valign=center>
-<center> <IMG SRC="http://www.emulationzone.org/sonichq/images/sonicnow.jpg" alt="The Freedom Fighters - After Robotnik"></a></b>
+<center> <IMG SRC="/sonichq/emuzone/images/sonicnow.jpg" alt="The Freedom Fighters - After Robotnik"></a></b>
 </a></b></center>
 </td></tr></table></center>
  
@@ -95,7 +95,7 @@ To further prove this - they EVEN allowed Archie to change Robotnik's look to th
 
 <TABLE ALIGN=CENTER BORDER=2 CELLSPACING=0 bordercolor=0000CC>
 <TR ALIGN=CENTER><TD>
-<center><IMG SRC="http://www.emulationzone.org/sonichq/comics/images/lostparadise.jpg" alt="Knuckles And The Chaotix VS Enerjak: Lost Paradise"></center>
+<center><IMG SRC="/sonichq/emuzone/comics/images/lostparadise.jpg" alt="Knuckles And The Chaotix VS Enerjak: Lost Paradise"></center>
 </TD></TR></TABLE>
 
 <br>
@@ -103,7 +103,7 @@ To further prove this - they EVEN allowed Archie to change Robotnik's look to th
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#990000"> <font face="Arial"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> End Game <img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> End Game <img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
@@ -117,27 +117,27 @@ Sonic wouldnt have believed him at first until it was too late - only realising 
 <TR>
 <TD>
 <center>
-<IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic47.jpg" 
+<IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic47.jpg" 
 alt="Sonic #47">
 </TD>
 <TD>
 <center>
-<IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic48.jpg" 
+<IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic48.jpg" 
 alt="Sonic #48">
 </TD>
 <TD>
 <center>
-<IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic49.jpg" 
+<IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic49.jpg" 
 alt="Sonic #49">
 </TD>
 <TD>
 <center>
-<IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic50.jpg" 
+<IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic50.jpg" 
 alt="Sonic #50">
 </TD>
 <TD>
 <center>
-<IMG SRC="http://members.spree.com/funNgames/asudem/comix/specials/small/sss6.jpg" 
+<IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/specials/small/sss6.jpg" 
 alt="Sonic Special #6">
 </TD>
 </TR></TABLE>
@@ -156,8 +156,8 @@ And it at least shows that sometimes, comic book companies DO listen. Endgame wa
 
 <p><TD>
 <center>
-<A HREF="http://www.emulationzone.org/sonichq/comics/comicpro.html">
-<IMG SRC="http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic30.jpg" 
+<A HREF="/sonichq/emuzone/comics/comicpro.html">
+<IMG SRC="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/comix/sonic/small/sonic30.jpg" 
 alt="Return To The Main Page">
 </a>
 </TD>
