--- a/sonichq/emuzone/dir/webrings.htm
+++ b/sonichq/emuzone/dir/webrings.htm
@@ -6,7 +6,7 @@
 <P><TABLE BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="100%">
 <TR><TD WIDTH=19><IMG SRC="/sonichq/topleft.gif" WIDTH=19></TD>
 <TD bgcolor=black width=100%>
-<SCRIPT language="JavaScript" src=http://www.emulationzone.org/sonichq/scripts/titlebar-rand.js></SCRIPT>
+<SCRIPT language="JavaScript" src=/sonichq/emuzone/scripts/titlebar-rand.js></SCRIPT>
 <IMG SRC="/sonichq/dir/topbar-dir.gif" ALIGN="right"></TD>
 <TD WIDTH=19><IMG SRC="/sonichq/topright.gif" WIDTH=19></TD></TR>
 </TABLE>
@@ -22,13 +22,13 @@
 <TD VALIGN=TOP WIDTH=2 BGCOLOR=404FE0>&nbsp;</td>
 <TD BGCOLOR="FFFFFF">
 
-<img src="http://www.emulationzone.org/sonichq/s&k.jpg" align=right>
+<img src="/sonichq/emuzone/s&k.jpg" align=right>
 
 <blockquote><br><font face="Arial"><font size=-1>Located here are all the numerous webrings Sonic HQ is becoming a part of! Considering ourselves a well versed Sonic site covering all mediums of the hedgehog: from cartoons, to comics, to games, this area lists various webrings we're associated with...<br>
 </blockquote>
 <br><center><b><a href=mailto:fishboy-shq@usa.net>Directory E-Mail - fishboy-shq@usa.net</a></b>
-<br><a href="http://sonichq.cjb.net/" target="_top"><font face=arial><b>Return To The Main Page?</a></b>
-<br><a href="http://sonichq.cjb.net/dir/" target="_top"><font face=arial><b>Return To The Directory Page?</a></b>
+<br><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/" target="_top"><font face=arial><b>Return To The Main Page?</a></b>
+<br><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/dir/" target="_top"><font face=arial><b>Return To The Directory Page?</a></b>
 <p><embed src=data.mid autostart="true" loop="true" console="small" width=50 height=30>
 <br>Sonic 3 - Data Select! (Carribean Beat)
 <br></center>
@@ -45,19 +45,19 @@
 <CENTER><P>
 <TABLE BORDER=3>
 <TD>
-<IMG SRC="http://www.emulationzone.org/sonichq/s&a.jpg">
+<IMG SRC="/sonichq/emuzone/s&a.jpg">
 <TD>
 <CENTER>
 <SMALL>
-<B>This <A HREF="http://www.webring.org/cgi-bin/webring?home&ring=segasonic">SegaSonic Zone</A> site is 
+<B>This <A HREF="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?home&ring=segasonic">SegaSonic Zone</A> site is 
 owned by <A HREF="mailto:fishboy-shq@usa.net">Sonic HQ</A>.<BR>
 Select Your Act:<BR>
-[<A HREF="http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&next">Next</A>|
-<A HREF="http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&skip">Skip</A>|
-<A HREF="http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&prev">Previous</A>|
-<A HREF="http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&next5">Next 5</A>|
-<A HREF="http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&random">Random</A>|
-<A HREF="http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&list">List Sites</A>]
+[<A HREF="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&next">Next</A>|
+<A HREF="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&skip">Skip</A>|
+<A HREF="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&prev">Previous</A>|
+<A HREF="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&next5">Next 5</A>|
+<A HREF="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&random">Random</A>|
+<A HREF="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=segasonic&id=(19)&list">List Sites</A>]
 </TABLE>
 </CENTER>
 <!- End SegaSonic Zone Ring code ->
@@ -66,22 +66,22 @@ Select Your Act:<BR>
 <!--start ring fragment-->
 <p><table border=5 cellspacing=5>
 <tr><td align=middle><font size=2>
-<a href="http://www.geocities.com/Tokyo/Towers/9036/tailsring.html"><img src="http://www.geocities.com/Tokyo/Towers/9036/tailsring.gif" align=center border=0 height=160 width=160></a></td>
+<a href="https://web.archive.org/20011101000000/http://www.geocities.com/Tokyo/Towers/9036/tailsring.html"><img src="https://web.archive.org/20011101000000/http://www.geocities.com/Tokyo/Towers/9036/tailsring.gif" align=center border=0 height=160 width=160></a></td>
 <td align=middle><center><br>
-<h5>This <a href="http://www.geocities.com/Tokyo/Towers/9036/tailsring.html">Tails Ring of Power </a>site<br>is owned by <a href="mailto:fish_boy@usa.net">Sonic HQ</a>.<br>
-<br>Click for the [<a href="http://www.webring.org/cgi-bin/webring?ring=tails&246=_&next">Next Site</a>|
-<a href="http://www.webring.org/cgi-bin/webring?ring=tails&246=_&skip">Skip It</a>|
-<a href="http://www.webring.org/cgi-bin/webring?ring=tails&246=_&random">Random Site</a>|
-<a href="http://www.webring.org/cgi-bin/webring?ring=tails&246=_&prev">Previous Page</a>|
-<a href="http://www.webring.org/cgi-bin/webring?ring=tails&246=_&list">List Sites</a>|
-<a href="http://www.webring.org/cgi-bin/webring?ring=tails&246=_&next5">Next Five</a>]
-<br><br>Want to join the ring? Go here for <a href="http://www.geocities.com/Tokyo/Towers/9036/tailsring.html">information</a>.<br><br></center></h5></font></td></tr></table>
+<h5>This <a href="https://web.archive.org/20011101000000/http://www.geocities.com/Tokyo/Towers/9036/tailsring.html">Tails Ring of Power </a>site<br>is owned by <a href="mailto:fish_boy@usa.net">Sonic HQ</a>.<br>
+<br>Click for the [<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=tails&246=_&next">Next Site</a>|
+<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=tails&246=_&skip">Skip It</a>|
+<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=tails&246=_&random">Random Site</a>|
+<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=tails&246=_&prev">Previous Page</a>|
+<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=tails&246=_&list">List Sites</a>|
+<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=tails&246=_&next5">Next Five</a>]
+<br><br>Want to join the ring? Go here for <a href="https://web.archive.org/20011101000000/http://www.geocities.com/Tokyo/Towers/9036/tailsring.html">information</a>.<br><br></center></h5></font></td></tr></table>
 <!--end ring fragment-->
 <BR><BR>
 <center> 
 <table border=5> 
-<td><img src="http://www.kontek.net/fish/kfiring1.gif"> 
-<td><center><small><b>This <a href="http://www.webring.org/cgi-bin/webring?home&ring=knuckles">Knuckles Floating Island Ring</a> site is owned and maintained by <a href="mailto:fishboy-shq@usa.net">Sonic HQ</a>.<br> Click here to juice to:<br> [<a href="http://www.webring.org/cgi-bin/webring?ring=knuckles&id=106&next">Next</a>|<a href="http://www.webring.org/cgi-bin/webring?ring=knuckles&id=106&skip">Skip</a>|<a href="http://www.webring.org/cgi-bin/webring?ring=knuckles&id=106&prev">Previous</a>|<a href="http://www.webring.org/cgi-bin/webring?ring=knuckles&id=106&next5">Next 5</a>|<a href="http://www.webring.org/cgi-bin/webring?ring=knuckles&id=106&random">Random</a>] </table> 
+<td><img src="https://web.archive.org/20011101000000/http://www.kontek.net/fish/kfiring1.gif"> 
+<td><center><small><b>This <a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?home&ring=knuckles">Knuckles Floating Island Ring</a> site is owned and maintained by <a href="mailto:fishboy-shq@usa.net">Sonic HQ</a>.<br> Click here to juice to:<br> [<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=knuckles&id=106&next">Next</a>|<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=knuckles&id=106&skip">Skip</a>|<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=knuckles&id=106&prev">Previous</a>|<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=knuckles&id=106&next5">Next 5</a>|<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=knuckles&id=106&random">Random</a>] </table> 
 
 
 <BR><BR>
@@ -89,16 +89,16 @@ Select Your Act:<BR>
 <TABLE BORDER="0" CELLPADDING="3" CELLSPACING="0">
  <TR><TD COLSPAN="3"><HR SIZE="1"></TD></TR>
  <TR ALIGN="center">
-  <TD><a href="http://www.usagi.com/anime" target=_parent>
-  <IMG SRC="http://www.usagi.com/anime/double.logos/p0001.jpg" ALT="The Anime Ring" BORDER="0"></A></TD>
+  <TD><a href="https://web.archive.org/20011101000000/http://www.usagi.com/anime" target=_parent>
+  <IMG SRC="https://web.archive.org/20011101000000/http://www.usagi.com/anime/double.logos/p0001.jpg" ALT="The Anime Ring" BORDER="0"></A></TD>
   <TD>
-  <A HREF="http://www.usagi.com/anime" TARGET="_top">Ring Home</A><BR>
-  <a href="http://www.webring.org/cgi-bin/webring?ring=anime&id=1842&skip" target=_top>Skip Next</a><br>
-  <a href="http://www.webring.org/cgi-bin/webring?ring=anime&id=1842&prev" target=_top>Prev Site</a><BR>
-  <a href="http://www.webring.org/cgi-bin/webring?ring=anime&id=1842&next5" target=_top>Next Five</a><BR>
-  <A HREF="http://www.webring.org/cgi-bin/webring?ring=anime;list" target="_top">List Sites</A></TD>
-  <TD><a href="http://www.webring.org/cgi-bin/webring?ring=anime&id=1842&next" target=_top>
-  <IMG SRC="http://www.usagi.com/anime/double.logos/n0001.jpg" ALT="Next Site" BORDER="0"></A></TD>
+  <A HREF="https://web.archive.org/20011101000000/http://www.usagi.com/anime" TARGET="_top">Ring Home</A><BR>
+  <a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=anime&id=1842&skip" target=_top>Skip Next</a><br>
+  <a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=anime&id=1842&prev" target=_top>Prev Site</a><BR>
+  <a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=anime&id=1842&next5" target=_top>Next Five</a><BR>
+  <A HREF="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=anime;list" target="_top">List Sites</A></TD>
+  <TD><a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=anime&id=1842&next" target=_top>
+  <IMG SRC="https://web.archive.org/20011101000000/http://www.usagi.com/anime/double.logos/n0001.jpg" ALT="Next Site" BORDER="0"></A></TD>
  </TR>
  <TR><TD COLSPAN="3"><HR SIZE="1"></TD></TR>
 </TABLE>
@@ -107,14 +107,14 @@ Select Your Act:<BR>
 <BR><BR>
 <center>
 <table border=2>
-<td align=center><img src="http://www.geocities.com/TimesSquare/Alley/3644/knothero.gif"> <br><small><i>Ring graphic made and provided by <a href="mailto:lshadow@geocities.com">Ratfink</a>.</i></small></td>
-<td><center><small><b>This <a href="http://www.geocities.com/TimesSquare/Alley/3644/knothero.htm">Knothole's Hero</a> site is owned by <a href="mailto:neoblackbat@hotmail.com">Sonic HQ</a>.<br>
+<td align=center><img src="https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/Alley/3644/knothero.gif"> <br><small><i>Ring graphic made and provided by <a href="mailto:lshadow@geocities.com">Ratfink</a>.</i></small></td>
+<td><center><small><b>This <a href="https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/Alley/3644/knothero.htm">Knothole's Hero</a> site is owned by <a href="mailto:neoblackbat@hotmail.com">Sonic HQ</a>.<br>
 Click below to go to:<br> [<a 
-href="http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&next">Next</a> | <a 
-href="http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&skip">Skip</a> | <a 
-href="http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&prev">Previous</a> | <a 
-href="http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&next5">Next 5</a> | <a 
-href="http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&random">Random</a> ] <br> View the <a href="http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&index">Index</a>! </small></center></td></tr> </table> </center> 
+href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&next">Next</a> | <a 
+href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&skip">Skip</a> | <a 
+href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&prev">Previous</a> | <a 
+href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&next5">Next 5</a> | <a 
+href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&random">Random</a> ] <br> View the <a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&index">Index</a>! </small></center></td></tr> </table> </center> 
 
 
 
@@ -122,12 +122,12 @@ href="http://www.webring.org/cgi-bin/webring?ring=knothero&id=yourid&random">Ran
 <!-- Begin The Great Entertainment Ring Fragment -->
 <table>
 <tr>
-<td><a href="http://www.geocities.com/tokyo/towers/1690/tger.html"><img alt="The Great Entertainment Ring" src="http://www.geocities.com/tokyo/towers/1690/tger.jpg" border=0></a></td>
+<td><a href="https://web.archive.org/20011101000000/http://www.geocities.com/tokyo/towers/1690/tger.html"><img alt="The Great Entertainment Ring" src="https://web.archive.org/20011101000000/http://www.geocities.com/tokyo/towers/1690/tger.jpg" border=0></a></td>
 <td><font size=2>
-This site is part of the <a href="http://www.geocities.com/tokyo/towers/1690/tger.html">The Great Entertainment Ring</a><br>
+This site is part of the <a href="https://web.archive.org/20011101000000/http://www.geocities.com/tokyo/towers/1690/tger.html">The Great Entertainment Ring</a><br>
 This site is owned by <a href="mailto:sonichq@emulationzone.org">Sonic HQ</a>.<br>
-Click for the [ <a href="http://www.webring.org/cgi-bin/webring?ring=entertain&id=__&next">Next Page</a> | <a href="http://www.webring.org/cgi-bin/webring?ring=entertain&id=__&skip">Skip It</a> | <a href="http://www.webring.org/cgi-bin/webring?ring=entertain&id=__&prev">Previous</a> | <a href="http://www.webring.org/cgi-bin/webring?ring=entertain&id=__&next5">Next Five</a>]<br><br>
-Want to join the ring?<a href="http://www.geocities.com/tokyo/towers/1690/tger.html"> Click here for info</a>.</font></td><br><br>
+Click for the [ <a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=entertain&id=__&next">Next Page</a> | <a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=entertain&id=__&skip">Skip It</a> | <a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=entertain&id=__&prev">Previous</a> | <a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=entertain&id=__&next5">Next Five</a>]<br><br>
+Want to join the ring?<a href="https://web.archive.org/20011101000000/http://www.geocities.com/tokyo/towers/1690/tger.html"> Click here for info</a>.</font></td><br><br>
 </table>
 <!-- End The Great Entertainment Ring Fragment -->
 
@@ -135,23 +135,23 @@ Want to join the ring?<a href="http://www.geocities.com/tokyo/towers/1690/tger.h
 <!-- Begin Notepad Ring Fragment-->
 <font size=2>
 <center>
-This <a href="http://www.webring.org/cgi-bin/webring?ring=notepad;home"
+This <a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=notepad;home"
 target=_top>Notepad Ring</a> site is owned by <a
 href="mailto:neoblackbat@hotmail.com">Sonic HQ</a>.
 <br>
 Click for the
 [<a
-href="http://www.webring.org/cgi-bin/webring?id=929&ring=notepad&next"target=_top>Next
+href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?id=929&ring=notepad&next"target=_top>Next
 Page</a> |
 <a
-href="http://www.webring.org/cgi-bin/webring?id=929&ring=notepad&skip"target=_top>Skip
+href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?id=929&ring=notepad&skip"target=_top>Skip
 It</a> |
 <a
-href="http://www.webring.org/cgi-bin/webring?id=929&ring=notepad&next5"target=_top>Next
+href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?id=929&ring=notepad&next5"target=_top>Next
 5</a> ]
 <br>
 Want to join the ring? Click here for
-<a href="http://www.webring.org/cgi-bin/webring?ring=notepad;home"
+<a href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=notepad;home"
 target=_top>info</a>.
 <br></center></font>
 <CENTER>
@@ -159,9 +159,9 @@ target=_top>info</a>.
 </CENTER>
 <map name="notepad.map">
 <area shape="rect" coords="0, 0, 60, 70" target="_top"
-href="http://www.webring.org/cgi-bin/webring?ring=notepad;home">
+href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=notepad;home">
 <area shape="rect" coords="465, 0, 549, 75" target="_top"
-href="http://www.webring.org/cgi-bin/webring?id=929&ring=notepad&next">
+href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?id=929&ring=notepad&next">
 </map>
 <!-- End Notepad Webring Fragment-->
 
@@ -171,13 +171,13 @@ href="http://www.webring.org/cgi-bin/webring?id=929&ring=notepad&next">
 <IMG src="tvtune.gif" useMap=#tvtune></td></tr>
 </table></center>
 <map name="tvtune">
-<area shape="RECT" coords="4,92,72,131" href="http://www.webring.org/cgi-bin/webring?ring=cartoon&amp;id=1&amp;next" 
+<area shape="RECT" coords="4,92,72,131" href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=cartoon&amp;id=1&amp;next" 
    >
-<area shape="RECT" coords="75,90,146,129" href="http://www.webring.org/cgi-bin/webring?ring=cartoon&amp;id=1&amp;next5" 
+<area shape="RECT" coords="75,90,146,129" href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=cartoon&amp;id=1&amp;next5" 
    >
-<area shape="RECT" coords="5,134,73,174" href="http://www.webring.org/cgi-bin/webring?ring=cartoon&amp;id=1&amp;random" 
+<area shape="RECT" coords="5,134,73,174" href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?ring=cartoon&amp;id=1&amp;random" 
    >
-<area shape="RECT" coords="77,133,146,174" href="http://www.webring.org/cgi-bin/webring?home&amp;ring=cartoon" 
+<area shape="RECT" coords="77,133,146,174" href="https://web.archive.org/20011101000000/http://www.webring.org/cgi-bin/webring?home&amp;ring=cartoon" 
    >
 <area shape="RECT" coords=0,0,0,0>
 </map>
@@ -191,9 +191,9 @@ href="http://www.webring.org/cgi-bin/webring?id=929&ring=notepad&next">
 
 <TABLE BORDER=0 CELLSPACING=0 CELLPADDING=0>
 <TR>
-<TD><IMG SRC="http://www.emulationzone.org/sonichq/bottomleft.gif" BORDER=0 HEIGHT=20></TD>
+<TD><IMG SRC="/sonichq/emuzone/bottomleft.gif" BORDER=0 HEIGHT=20></TD>
 <TD WIDTH=100% BGCOLOR=000000><FONT COLOR="white" SIZE=-3 FACE="verdana"><CENTER>All Directory pages and layout are copyrighted © 1996-99 Sonic HQ.</CENTER></FONT></TD>
-<TD><IMG SRC="http://www.emulationzone.org/sonichq/bottomright.gif" BORDER=0 HEIGHT=20></TD>
+<TD><IMG SRC="/sonichq/emuzone/bottomright.gif" BORDER=0 HEIGHT=20></TD>
 </TR>
 </TABLE>
 
