--- a/sonichq/emuzone/fanfair/fangames/index.htm
+++ b/sonichq/emuzone/fanfair/fangames/index.htm
@@ -20,7 +20,7 @@ Fan Games</font></font></font></b></td>
 
 <center><table BORDER=0 CELLSPACING=3 CELLPADDING=6 WIDTH="100%" BGCOLOR="#FFFFFF" >
 <tr>
-<td ALIGN=CENTER VALIGN=TOP WIDTH="35%"><a href="http://www.emulationzone.org/sonichq/SonicRPG/"><img SRC="sonicrpg.jpg" ALT="Made by Mettle" BORDER=0 ></a></td>
+<td ALIGN=CENTER VALIGN=TOP WIDTH="35%"><a href="/sonichq/emuzone/SonicRPG/"><img SRC="sonicrpg.jpg" ALT="Made by Mettle" BORDER=0 ></a></td>
 
 <td VALIGN=TOP BGCOLOR="#222244"><b><font face="Arial"><font color="#FFFFFF"><font size=-1>Sonic
 RPG is by far probably one of the most well-known fan made Sonic games
@@ -29,21 +29,21 @@ decent graphics and SatAM characters. Last updated on May 20th.</font></font></f
 </tr>
 
 <tr>
-<td ALIGN=CENTER VALIGN=TOP WIDTH="35%"><a href="http://www.emulationzone.org/sonichq/games/index/fangames/SonicBrick.html"><img SRC="sonicbrick.jpg" ALT="Made by Johan Leion" BORDER=0 ></a></td>
+<td ALIGN=CENTER VALIGN=TOP WIDTH="35%"><a href="/sonichq/emuzone/games/index/fangames/SonicBrick.html"><img SRC="sonicbrick.jpg" ALT="Made by Johan Leion" BORDER=0 ></a></td>
 
 <td VALIGN=TOP BGCOLOR="#222244"><b><font face="Arial"><font color="#FFFFFF"><font size=-1>Sonic
 Brick</font></font></font></b></td>
 </tr>
 
 <tr>
-<td ALIGN=CENTER VALIGN=TOP WIDTH="35%"><a href="http://www.emulationzone.org/sonichq/games/index/fangames/SearchForKnuckles.html"><img SRC="searchknux.jpg" ALT="Made by Johan Leion" BORDER=0 ></a></td>
+<td ALIGN=CENTER VALIGN=TOP WIDTH="35%"><a href="/sonichq/emuzone/games/index/fangames/SearchForKnuckles.html"><img SRC="searchknux.jpg" ALT="Made by Johan Leion" BORDER=0 ></a></td>
 
 <td VALIGN=TOP BGCOLOR="#222244"><b><font face="Arial"><font color="#FFFFFF"><font size=-1>Sonic
 Trek</font></font></font></b></td>
 </tr>
 
 <tr>
-<td ALIGN=CENTER VALIGN=TOP WIDTH="35%"><a href="http://www.emulationzone.org/sonichq/games/index/fangames/SRB.html"><img SRC="roboblast.jpg" ALT="Made Sonic Team Jr." BORDER=0 ></a></td>
+<td ALIGN=CENTER VALIGN=TOP WIDTH="35%"><a href="/sonichq/emuzone/games/index/fangames/SRB.html"><img SRC="roboblast.jpg" ALT="Made Sonic Team Jr." BORDER=0 ></a></td>
 
 <td VALIGN=TOP BGCOLOR="#222244"><b><font face="Arial"><font color="#FFFFFF"><font size=-1>Sonic
 Robo Blast 1</font></font></font></b></td>
