--- a/sonichq/emuzone/games/SonicAdventure/SonicAdventure.html
+++ b/sonichq/emuzone/games/SonicAdventure/SonicAdventure.html
@@ -4,12 +4,12 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#000000" text="#ccccff" link="#ffcc00" vlink="#009933" background="http://www.geocities.com/EnchantedForest/Tower/4309/fedbag.gif" bgproperties=fixed>
-<embed src="http://www.geocities.com/EnchantedForest/Tower/4309/mm3-snkm.mid" autostart="true" hidden="true" loop="true">
+<body bgcolor="#000000" text="#ccccff" link="#ffcc00" vlink="#009933" background="/sonichq/geocities/EnchantedForest/Tower/4309/fedbag.gif" bgproperties=fixed>
+<embed src="/sonichq/geocities/EnchantedForest/Tower/4309/mm3-snkm.mid" autostart="true" hidden="true" loop="true">
 
 <table border="0" cellspacing="0" cellpadding="8"><tr><td>
 
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/sonjam0.gif"></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/sonjam0.gif"></center>
 
 <p align><b>Blue is back....And this this time he's come with a vengeance! After a long streak of not being seen in the gameworld or lower par than usual Sonic games. Henceforth comes the Sonic game to top ALL Sonic games! It is the ULTIMATE ADVENTURE! Or rather - The Sonic Adventure!</p>
 
@@ -21,9 +21,9 @@
 <p>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/sonicadventure_logo.gif" alt="The Games Gallery: Sonic Adventure !!!"></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/sonicadventure_logo.gif" alt="The Games Gallery: Sonic Adventure !!!"></center>
 <!-- dimension-s URL is down
-<center><IMG SRC="http://www.dimension-s.com/images/sega-news/Dec98/tobira_so.jpg" alt="The Games Gallery: Sonic Adventure !!!"></center>
+<center><IMG SRC="https://web.archive.org/20011101000000/http://www.dimension-s.com/images/sega-news/Dec98/tobira_so.jpg" alt="The Games Gallery: Sonic Adventure !!!"></center>
 -->
 </TD></TR></TABLE>
 </p>
@@ -35,9 +35,9 @@
 
 <table cellpadding="8" bgcolor="#ccccff"><tr><td>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Dell/6657/pjsmini2.gif" width=130 height=200 alt="Sonic HQ: Project Sonic"><br></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Dell/6657/pjsmini2.gif" width=130 height=200 alt="Sonic HQ: Project Sonic"><br></center>
 
-<font color="#000066"><p align="justify"><font size=-1><b>Copyrights for Sega Games and materials belong to <a href="http://www.sega.com/">Service Games, Inc</a>.</b> Sonic Headquarters has no connections with Sega, Nintendo, Sony or any other gaming-company. It was created by <a href="mailto:zifei@yahoo.com">Zifei Wu</a> and this page is maintained by <a href="mailto:neoblackbat@hotmail.com">Jonathan "WB" Gray</a> . If you want to use text, music or screenshots from Sonic HQ on your website, then we ask that you ask us permission first as it took us quite a bit of hardwork to make it. As long as you credit the site properly and also link to it everything should be OK. On the internet, artwork and original graphics are exclusive to Sonic HQ, so don't use them. For any publication besides the web, please write for permission first. All original material on this site is copyright © 1996-1998 Sonic HQ.</font></p>
+<font color="#000066"><p align="justify"><font size=-1><b>Copyrights for Sega Games and materials belong to <a href="https://web.archive.org/20011101000000/http://www.sega.com/">Service Games, Inc</a>.</b> Sonic Headquarters has no connections with Sega, Nintendo, Sony or any other gaming-company. It was created by <a href="mailto:zifei@yahoo.com">Zifei Wu</a> and this page is maintained by <a href="mailto:neoblackbat@hotmail.com">Jonathan "WB" Gray</a> . If you want to use text, music or screenshots from Sonic HQ on your website, then we ask that you ask us permission first as it took us quite a bit of hardwork to make it. As long as you credit the site properly and also link to it everything should be OK. On the internet, artwork and original graphics are exclusive to Sonic HQ, so don't use them. For any publication besides the web, please write for permission first. All original material on this site is copyright © 1996-1998 Sonic HQ.</font></p>
 
 </td></tr></table></body></html>
 
@@ -47,7 +47,7 @@
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#990000"> <font face="Lucida Console" color="#ffcc00"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> The Return Of The Eggman....Plus One...<img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> The Return Of The Eggman....Plus One...<img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
@@ -57,7 +57,7 @@
 <br>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/top1127.jpg" alt="Peace On Earth And Mobius?...Not For Long..."></a></b>
+<center> <IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/top1127.jpg" alt="Peace On Earth And Mobius?...Not For Long..."></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 <b>
@@ -71,7 +71,7 @@
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/p_chaos.jpg" alt="Perfect Chaos...Or Perfect Disaster?"></a></b>
+<center> <IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/p_chaos.jpg" alt="Perfect Chaos...Or Perfect Disaster?"></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 <b>
@@ -90,7 +90,7 @@ With Perfect Chaos under his control, Dr. Eggman plans to use the beast to take 
 <!-- dimension-s URL is down
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.dimension-s.com/images/sega-news/nov98/image5.jpg" alt="Marching Towards Victory...."></a></b>
+<center> <IMG SRC="https://web.archive.org/20011101000000/http://www.dimension-s.com/images/sega-news/nov98/image5.jpg" alt="Marching Towards Victory...."></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 -->
@@ -101,16 +101,16 @@ With Perfect Chaos under his control, Dr. Eggman plans to use the beast to take 
 
 <TR ALIGN=CENTER><TD>
 
-<H4><A HREF="http://www.emulationzone.org/sonichq/games/SonicAdventure/briefing.html">Sonic Gameplay</A></H4>UPDATED 8/7
+<H4><A HREF="/sonichq/emuzone/games/SonicAdventure/briefing.html">Sonic Gameplay</A></H4>UPDATED 8/7
 
 <TD>So just WHAT is Sonic Adventure like? Come here for one HUGE preview full of basic info, gameplay, and exactly WHAT the game will consist of. Come here to get your briefing on Sonic's next mission - The Sonic Adventure....
 
 <TR ALIGN=CENTER><TD>
-<H4><A HREF="http://www.emulationzone.org/sonichq/games/SonicAdventure/walkthrough.html">Stats And Walkthrough</A></H4>
+<H4><A HREF="/sonichq/emuzone/games/SonicAdventure/walkthrough.html">Stats And Walkthrough</A></H4>
 
 <TD>This will become the place where you will be able to find the walkthrough when we are able to get our hands on the game - which wont be for a LONG while. Right now this section holds stats for the game as well as screenshots and descriptions of the various levels located in Sonic Adventure. <TR ALIGN=CENTER><TD>
 
-<H4><FONT COLOR=BLUE><A HREF="http://www.emulationzone.org/sonichq/games/SonicAdventure/characters.html">Game Characters </A></FONT><BR>
+<H4><FONT COLOR=BLUE><A HREF="/sonichq/emuzone/games/SonicAdventure/characters.html">Game Characters </A></FONT><BR>
 
 <TD>This Sonic game features the largest cast ever! Who are the heroes and various villians in the game? Come here to find out the various characters in SA and the gameplay and moves surrounding them... 
 
@@ -122,7 +122,7 @@ With Perfect Chaos under his control, Dr. Eggman plans to use the beast to take 
 
 <TR ALIGN=CENTER><TD>
 
-<H4><A HREF="http://www.emulationzone.org/sonichq/music/subpages/SonicAdventure.htm">A Little Song And Dance</A></H4>
+<H4><A HREF="/sonichq/emuzone/music/subpages/SonicAdventure.htm">A Little Song And Dance</A></H4>
 
 <TD>Music makes the world go round and Sonic Adventure is no different! Click here to see and hear the themes and lyrics of the SA characters...
 
