--- a/sonichq/emuzone/games/download/download.html
+++ b/sonichq/emuzone/games/download/download.html
@@ -9,7 +9,7 @@
 </style>
 </head>
 
-<body bgcolor="#000000" background="http://www.emulationzone.org/sonichq/images/bg.gif"
+<body bgcolor="#000000" background="/sonichq/emuzone/images/bg.gif"
 text="4B1FFC" link="ffffff" vlink="ffffff">
 <div align="center"><center>
 
@@ -36,7 +36,7 @@ text="4B1FFC" link="ffffff" vlink="ffffff">
 <table border="1" cellspacing="0" bordercolorlight="#0000FF" bordercolordark="#000080">
   <tr>
     <td colspan="2" align="center"><font face="Verdana"><img
-    src="http://www.angelfire.com/ok/warpsonic/images/bar1.gif" width="441" height="39"
+    src="/sonichq/angelfire/images/bar1.gif" width="441" height="39"
     alt="Sonic's running sprite..."></font></td>
   </tr>
   <tr>
@@ -67,7 +67,7 @@ text="4B1FFC" link="ffffff" vlink="ffffff">
 <p align="center"><font size="+2">SEGA PC Demos</font> </p>
 
 <p align="center"><small>These are demos of Sega Entertainment's PC conversions of Sonic
-games. They each require <a href="http://microsoft.com/directx/default.asp">DirectX 5</a>.
+games. They each require <a href="https://web.archive.org/20011101000000/http://microsoft.com/directx/default.asp">DirectX 5</a>.
 I strongly recommend all the PC Conversions. </small></p>
 </font>
 
@@ -80,43 +80,43 @@ bordercolorlight="blue">
   </tr>
   <tr align="center">
     <font face="Verdana"><td><small><a
-    href="http://www.sega.com/multimedia/game_demos/exe/sk_demo.exe">Sonic &amp; Knuckles
+    href="https://web.archive.org/20011101000000/http://www.sega.com/multimedia/game_demos/exe/sk_demo.exe">Sonic &amp; Knuckles
     Collection</a> </small></font></td>
     <td><small><a
-    href="http://sonichq.cjb.net/games/index/Sonic3_Knuckles/Sonic3_Knuckles.html">Info</a> </small></td>
+    href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/Sonic3_Knuckles/Sonic3_Knuckles.html">Info</a> </small></td>
     <td><small>5 MB </small></td>
   </tr>
   <tr align="center">
     <font face="Verdana"><td><small><a
-    href="http://www.sega.com/multimedia/game_demos/exe/s3d_demo.exe">Sonic 3D Blast</a> </small></font></td>
-    <td><small><a href="http://sonichq.cjb.net/games/index/Sonic3DBlast.html">Info</a> </small></td>
+    href="https://web.archive.org/20011101000000/http://www.sega.com/multimedia/game_demos/exe/s3d_demo.exe">Sonic 3D Blast</a> </small></font></td>
+    <td><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/Sonic3DBlast.html">Info</a> </small></td>
     <td><small>2.5 MB </small></td>
   </tr>
   <tr align="center">
     <font face="Verdana"><td><small><a
-    href="http://www.download.com/PC/Result/TitleDetail/0,4,0-20383,1000.html?st.dl.results.list.tdtl">Sonic
+    href="https://web.archive.org/20011101000000/http://www.download.com/PC/Result/TitleDetail/0,4,0-20383,1000.html?st.dl.results.list.tdtl">Sonic
     CD</a> </small></font></td>
-    <td><small><a href="http://sonichq.cjb.net/games/index/SonicCD.html">Info</a> </small></td>
+    <td><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/SonicCD.html">Info</a> </small></td>
     <td><small>5 MB </small></td>
   </tr>
   <tr>
     <font face="Verdana"><td align="center"><small><a
-    href="http://www.sega.com/segapc/segapc_sonicr.html">Sonic R</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://www.sega.com/segapc/segapc_sonicr.html">Sonic R</a></small></font></td>
     <td align="center"><small><a
-    href="http://www.emulationzone.org/sonichq/games/index/SonicR.html">Info</a></small></td>
+    href="/sonichq/emuzone/games/index/SonicR.html">Info</a></small></td>
     <td align="center"><p align="center"><small>?.?? MB</small></td>
   </tr>
 </table>
 <font face="Verdana">
 
 <p align="center"><img
-src="http://www.angelfire.com/ok/warpsonic/images/pcson3dblstbox.jpg" width="180"
+src="/sonichq/angelfire/images/pcson3dblstbox.jpg" width="180"
 height="219" align="right" alt="Sonic 3D Blast PC box (again, American)"><small>Sonic 3D
 Blast Demo includes only the first act and the special stage. Also, it may not work on all
 computers (at least it doesn't on mine) due to its resolution. Oddly enough, I can still
 take screeenshots!</small></p>
 
-<p align="center"><img src="http://www.angelfire.com/ok/warpsonic/images/pcsonickbox.jpg"
+<p align="center"><img src="/sonichq/angelfire/images/pcsonickbox.jpg"
 width="180" height="184" align="left" alt="S&amp;K Collection box (American)"><small>S&amp;K
 Collection Demo lets you play the Angel Island Zone with any charater. The full version
 includes Sonic 3 &amp; Knuckles, Sonic 3, Sonic &amp; Knuckles, the Sonic Screen Saver, a
