--- a/sonichq/emuzone/games/download/fangames.html
+++ b/sonichq/emuzone/games/download/fangames.html
@@ -9,7 +9,7 @@
 </style>
 </head>
 
-<body bgcolor="#000000" background="http://www.emulationzone.org/sonichq/images/bg.gif"
+<body bgcolor="#000000" background="/sonichq/emuzone/images/bg.gif"
 text="4B1FFC" link="ffffff" vlink="ffffff">
 <div align="center"><center>
 
@@ -36,10 +36,10 @@ text="4B1FFC" link="ffffff" vlink="ffffff">
 played online in your browser. </small></p>
 
 <p ALIGN="CENTER"><small><a
-HREF="http://www.p-a-u-l.com/cgi-bin/ads.pl?advert=NonSSI&amp;page=01" target="while"><img
-SRC="http://www.p-a-u-l.com/cgi-bin/ads.pl?ID=sonichqgames&amp;page=01" HEIGHT="40"
+HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/cgi-bin/ads.pl?advert=NonSSI&amp;page=01" target="while"><img
+SRC="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/cgi-bin/ads.pl?ID=sonichqgames&amp;page=01" HEIGHT="40"
 WIDTH="400" ALT="Sonic Exchange - Sonic The Hedgehog Banner Exchange!"></a><br>
-<small><a HREF="http://www.p-a-u-l.com/sonic/banex/" target="whole">Sonic Exchange - Sonic
+<small><a HREF="https://web.archive.org/20011101000000/http://www.p-a-u-l.com/sonic/banex/" target="whole">Sonic Exchange - Sonic
 The Hedgehog Banner Exchange!</a></small></small></p>
 
 <p align="center"><strong><font size="2">Klik &amp; Play / The Games Factory</font> </strong></p>
@@ -57,32 +57,32 @@ bordercolordark="#23238E">
   </tr>
   <tr align="center">
     <td align="center"><font face="Verdana"><small><a
-    href="http://home7.swipnet.se/~w-70823/sonic_brick.zip">Sonic Brick</a></small></font></td>
-    <td align="center"><font face="Verdana"><small><a href="http://sonichq.cjb.net/games/index/fangames/SonicBrick.html">******</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://home7.swipnet.se/~w-70823/sonic_brick.zip">Sonic Brick</a></small></font></td>
+    <td align="center"><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/fangames/SonicBrick.html">******</a></small></font></td>
     <td align="center"><font face="Verdana"><small>1.1 MB</small></font></td>
   </tr>
   <tr align="center">
     <td align="center"><font face="Verdana"><small><a
-    href="http://home7.swipnet.se/~w-70823/search_for_knuckles.zip">The Search For Knuckles</a></small></font></td>
-    <td align="center"><font face="Verdana"><small><a href="http://sonichq.cjb.net/games/index/fangames/SearchForKnuckles.html">****</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://home7.swipnet.se/~w-70823/search_for_knuckles.zip">The Search For Knuckles</a></small></font></td>
+    <td align="center"><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/fangames/SearchForKnuckles.html">****</a></small></font></td>
     <td align="center"><font face="Verdana"><small>1.29 MB</small></font></td>
   </tr>
   <tr align="center">
     <td align="center"><font face="Verdana"><small><a
-    href="http://segasonic.simplenet.com/stjr/stjrdown.htm">Sonic Robo Blast</a></small></font></td>
-    <td align="center"><font face="Verdana"><small><a href="http://sonichq.cjb.net/games/index/fangames/SRB.html">*****</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://segasonic.simplenet.com/stjr/stjrdown.htm">Sonic Robo Blast</a></small></font></td>
+    <td align="center"><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/fangames/SRB.html">*****</a></small></font></td>
     <td align="center"><font face="Verdana"><small>Over 10MB</small></font></td>
   </tr>
   <tr align="center">
     <td align="center"><font face="Verdana"><small><a
-    href="http://rivendell.fortunecity.com/masquerade/487/tailsr.zip">Tails R</a></small></font></td>
-    <td align="center"><font face="Verdana"><small><a href="http://sonichq.cjb.net/games/index/fangames/TailsR.html">****</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://rivendell.fortunecity.com/masquerade/487/tailsr.zip">Tails R</a></small></font></td>
+    <td align="center"><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/fangames/TailsR.html">****</a></small></font></td>
     <td align="center"><font face="Verdana"><small>430K</small></font></td>
   </tr>
   <tr align="center">
     <td align="center"><font face="Verdana"><small><a
-    href="http://members.tripod.com/~mettle_sonic/SonicRpg.zip">Sonic Brick</a></small></font></td>
-    <td align="center"><font face="Verdana"><small><a href="http://sonichq.cjb.net/SonicRPG/">Demo</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://members.tripod.com/~mettle_sonic/SonicRpg.zip">Sonic Brick</a></small></font></td>
+    <td align="center"><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/SonicRPG/">Demo</a></small></font></td>
     <td align="center"><font face="Verdana"><small>400K</small></font></font></td>
   </tr>
 </table>
@@ -92,7 +92,7 @@ bordercolordark="#23238E">
 <p align="center"><strong><font size="2">Vitalize! Games</font> </strong></p>
 
 <p align="center"><small>In order to play these online games, you need to have <a
-href="http://www.vitalize.co.uk/downloads.html">Corel Vitalize!</a> installed. Click on a
+href="https://web.archive.org/20011101000000/http://www.vitalize.co.uk/downloads.html">Corel Vitalize!</a> installed. Click on a
 game's rating to learn more about it. </small></p>
 </font><div align="center"><center>
 
