--- a/sonichq/emuzone/games/gameplay/moves.html
+++ b/sonichq/emuzone/games/gameplay/moves.html
@@ -4,14 +4,14 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#000000" text="#ffd700" link="#990000" vlink="#009933" background="http://www.emulationzone.org/sonichq/images/starrystreak.gif">
-<embed src="http://www.geocities.com/EnchantedForest/Tower/4309/jungle.mid" autostart="true" hidden="true" loop="true"><br><CENTER>
+<body bgcolor="#000000" text="#ffd700" link="#990000" vlink="#009933" background="/sonichq/emuzone/images/starrystreak.gif">
+<embed src="/sonichq/geocities/EnchantedForest/Tower/4309/jungle.mid" autostart="true" hidden="true" loop="true"><br><CENTER>
 
 
 <H1><u>Basic And Signature Moves</u></H1>
 <br>
 
-<IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/front2.gif" ALT="Sonic Stampede !!!" align="center">
+<IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/front2.gif" ALT="Sonic Stampede !!!" align="center">
 
 <br>
 <br>
@@ -19,7 +19,7 @@
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#990000"> <font face="Lucida Console" color="#ffcc00"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> Speed Into Spontanaiety....<img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> Speed Into Spontanaiety....<img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
@@ -28,7 +28,7 @@
 
 
 <H3><u><br><br><A NAME="2D">Movin' On Up !!!</u></H3></b>
-<img src="http://www.geocities.com/EnchantedForest/Dell/7834/bluebar.jpg">
+<img src="/sonichq/geocities/EnchantedForest/Dell/7834/bluebar.jpg">
 
 
 <b><p>Sonic and the main characters of the game series each have basic moves that they share, or special SIGNATURE moves that ONLY that character can perform! Listed below are the Basic and Signature moves of the main characters of the Sonic series. Click on one of the anchor links below, to take you to whichever section of the page you would like to view first:
@@ -45,60 +45,60 @@
 
 <p><H3><A NAME="basic">Basic Moves</H3>
 
-<IMG SRC="http://www.emulationzone.org/sonichq/images/moves.jpg" ALT="Just Chillin'!" align="center">
+<IMG SRC="/sonichq/emuzone/images/moves.jpg" ALT="Just Chillin'!" align="center">
 <br>
-<img src="http://www.geocities.com/EnchantedForest/Dell/7834/bluebar.jpg">
+<img src="/sonichq/geocities/EnchantedForest/Dell/7834/bluebar.jpg">
 <br><br>
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
 <DL>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/pa-wait.gif" align=left>
-<IMG SRC="http://www.emulationzone.org/sonichq/images/knuxpunch.gif" align=left>
-<IMG SRC="http://www.emulationzone.org/sonichq/images/tailsyawn.gif" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/pa-wait.gif" align=left>
+<IMG SRC="/sonichq/emuzone/images/knuxpunch.gif" align=left>
+<IMG SRC="/sonichq/emuzone/images/tailsyawn.gif" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Stand</b></FONT>
 <DD><blockquote>Standing idle is something Sonic doesn't do well AT ALL. Stand idle for less than a few seconds and Sonic will either tap his feet in impatience or go as far as pulling out an easy chair and some shades and sip weak tea. Tails meanwhile becomes bored with everything and will stand and yawn in a cute little pose as if to look sleepy, and Knuckles has this little shimmy he'd love to show to you if you have the time! ;)
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/sonic_running.gif" align=left>
-<IMG SRC="http://www.emulationzone.org/sonichq/images/knuckles_running.gif" align=left>
-<IMG SRC="http://www.emulationzone.org/sonichq/images/trun.gif" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/sonic_running.gif" align=left>
+<IMG SRC="/sonichq/emuzone/images/knuckles_running.gif" align=left>
+<IMG SRC="/sonichq/emuzone/images/trun.gif" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Run</b></FONT>
 <DD><blockquote>Running is definetely Sonic's forte as he runs the fastest of the trio. With an arsenal of running moves, his most fastest is the "Super Peel-Out" or "Figure 8 Dash" (<i>Sonic CD</i>)in which Sonic gives off an appearance to run so fast that he almost hovers. This is the only move that Sonic can use to destroy badniks WITHOUT curling up into a ball. The only way Tails can keep up with Sonic is by twirling his twin tails like helicopter blades, and even though Knux has capable running speeds, not even he can keep up with the blue blur
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/spin.gif" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/spin.gif" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Spindash / "Triple S" Spin</b></FONT>
 <DD><blockquote>This is THE Sonic signature move - The Triple Super Sonic Spin Attack! By curling himself up like a ball and revving his feet like an engine, Sonic does a "Peel Out" and basically tears through the landscape at anything in his path. Tails and Knuckles can imitate this move to some degree but as stated before - Sonic is obviously more powerful and experienced with it
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/pa-fly.gif" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/pa-fly.gif" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Flight (Tails Only)</b></FONT>
 <DD><blockquote>Little Tails is the only guy blessed with the power of flight. This gives him an advantage not even Sonic or Knux has! With basic flight being Tails' main signature move, he's come to do many things with it. For one thing, he can transport Sonic to various areas which he could previously never gain access to. By flying close to Sonic's arms or having Sonic "jump" into his arms, Tails can carry Sonic for a limited period of time until he gets tired. Another noteable fact is Tails' flight mode can also be used as an attack. If Tails comes up from under and enemy and his "helicopter blade-like" tails are in action - he can shred the badnik in a nice attack! A little harder to execute than most moves, but really neat nonetheless!
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/knuxglide.gif" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/knuxglide.gif" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Glide (Knuckles Only)</b></FONT>
 <DD><blockquote>One of Knuckles' three signature signature moves - the glide is arguably his best. Whereas Tails can fly, Knux can only use his dreads to ride the wind. This keeps him from falling from VERY HIGH areas and will often save him from falling into pits. If Knuckles rams his claws into a badnik while gliding he can destroy it, but this isn't an easy move to execute as it requires speed, precision, and a little common sense...
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/knuxlookingup.gif" align=left>
-<IMG SRC="http://www.emulationzone.org/sonichq/images/knuxclimb.gif" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/knuxlookingup.gif" align=left>
+<IMG SRC="/sonichq/emuzone/images/knuxclimb.gif" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Climb (Knuckles Only)</b></FONT>
 <DD><blockquote>If Knux glides or jumps into a cliff he can use his sharp claws to climb up the slope like a ladder! It allows him to access place normally inacessible by Sonic but he doesn't have as wide a range as Tails.
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/knuxpunch.gif" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/knuxpunch.gif" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Dig (Knuckles Only)</b></FONT>
 <DD><blockquote>The third of Knuckles' signature moves is the dig move! Which allows him to do something no other Sonic character can - dig into the ground at specific locations to reveal hidden passageways and hidden items. All in all VERY useful!
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/jump.jpg" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/jump.jpg" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Jump</b></FONT>
 <DD><blockquote>Whenever Sonic jumps he curls up into a ball so that his spikes "stick out", this way when he lands on a badnik he can near shred it. Tails and Knux copy the attack to some extent, but Sonic is more powerful
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/swim.jpg" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/swim.jpg" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Swim (Tails Only) And Breathe</b></FONT>
 <DD><blockquote>Why is this here? Well basically the picture to the left is a falsehood. Sonic can't swim worth a lick. Not only does he sink like a stone, he can't even get to the surface for water - his only source of air being the giant air bubbles and fissures that frequent Mobius' underwater areas. Tails however CAN swim and seems to be the only member of the Trio that can do it. However as far as breathing goes - unless he makes it to the surface, he too must rely on the bubble factor. 
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/grab.jpg" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/grab.jpg" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Grab</b></FONT>
 <DD><blockquote>If any of the trio runs fast enough or are blown into them they can grab a hold of poles within the area and use them to either hold on or move up and down. Press the necessary button to let go
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/death.jpg" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/death.jpg" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Death</b></FONT>
 <DD><blockquote>Ba da bing ba da boom - Death is death no matter HOW you look at it. There are MULTIPLE ways to die, but the most constant of the two is getting hit with 0 Power Rings and getting crushed. Everytime you die you lose 1 man.
 <P></blockquote><HR>
@@ -110,45 +110,45 @@
 
 <p><H3><A NAME="signature">Signature Moves</H3>
 
-<IMG SRC="http://www.emulationzone.org/sonichq/images/moves.jpg" ALT="Just Chillin'!" align="center">
+<IMG SRC="/sonichq/emuzone/images/moves.jpg" ALT="Just Chillin'!" align="center">
 <br>
-<img src="http://www.geocities.com/EnchantedForest/Dell/7834/bluebar.jpg">
+<img src="/sonichq/geocities/EnchantedForest/Dell/7834/bluebar.jpg">
 <br><br>
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
 <DL>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/pa-super.gif" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/pa-super.gif" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Super Mode (Sonic And Knuckles Only)</b></FONT>
 <DD><blockquote>First introduced in <i><b>Sonic 2</i></b> And re-introduced in <b><i>Sonic 3</i></b> - Super Mode is the first and regular phase of the "Ultimate Sonic" - this can ONLY be achieved by completing all the special stages and gaining ALL 7 Chaos Emeralds and posessing 50 rings. Sonic and Knuckles, when fully powered by the 7 Chaos Emeralds, become "supreme" forms of themselves thus turning into Super Sonic And Hyper Knuckles! In these forms they are completely invulnerable to everything except getting crushed, drowned or falling into a pit! Other than that _nothing_ can hurt them...As Super Sonic, Sonic's normally blue fur turns a golden yellow, while Knuckles red fur becomes a hot pink!
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/sonic10.gif" align=left>
+<DT><IMG SRC="/sonichq/emuzone/images/sonic10.gif" align=left>
 <DD><FONT COLOR="#55FFFF"><b>Hyper/Mega Mode (Everybody)</b></FONT>
 <DD><blockquote>First introduced in <i><b>Sonic 3 And Knuckles</i></b> - Hyper Mode is the ULTIMATE in the Sonic Super phase. To access this mode IS NOT easy however as you must get 7 Chaos Emeralds PLUS the floating Islands 7 Super Emeralds - powered by the Master Emerald. In total (Not counting the Master) that makes a whopping 14 emeralds. And once you pass the Launch Base zone in Sonic 3 And Knuckles - you can't use Super Sonic again...So its an uphill fight for the Hyper Powers instead! In these forms Sonic, Tails, And Knux are completely invulnerable to everything except getting crushed, drowned or falling into a pit! Other than that _nothing_ can hurt them...All natural abilities are also heightened. As Super Sonic, Sonic's powers are TWICE what they were before! Now he turns darn near every color of the rainbow and leaves multiple images of himself in his wake. He can destroy everything on screen with a single Sonic Boom Attack, and couple that with the fact that NOW he can fly (<i>The Doomsday Zone</i>)!!! Knuckles red fur becomes a shocking pink, and to prove it he leaves multiple images and electric waves as well! His punch is now enhanced so that if he rams himself into a wall while gliding, he creates an instant "Earthquake Attack". Tails even gets a taste as he becomes Hyper Tails - his fur turning a golden brown. Tails can now summon 4 Flicky Birds (<i>Sonic 3D Blast</i>) as his weapons of choice and can send them out to destroy anything with his path! 
 <P></blockquote><HR>
-<DT> <IMG SRC="http://www.geocities.com/TimesSquare/Dungeon/5491/scd_17.gif">
+<DT> <IMG SRC="https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/Dungeon/5491/scd_17.gif">
 <DD><FONT COLOR="#55FFFF"><b>Super Peel Out / Figure 8 Dash (Sonic Only)</b></FONT>
 <DD><blockquote>First introduced in <i><b>Sonic CD</i></b> and re-introduced in <i>Sonic Chaos</i>, the Super Peel is basically the "dash on the spot move"! By pressing the correct buttons, Sonic can do an instantaneous dash and barrel through the zones! In fact, he goes so fast that he gives off the impression that his legs do a "Figure 8"! The only drawback to this move - its the only dash where you can are vulnerable to attacks if you're hit...
 <P></blockquote><HR>
-<DT> <IMG SRC="http://www.geocities.com/TimesSquare/Dungeon/5491/stt_1.gif">
- <IMG SRC="http://www.geocities.com/TimesSquare/Dungeon/5491/stt_3.gif">
+<DT> <IMG SRC="https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/Dungeon/5491/stt_1.gif">
+ <IMG SRC="https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/Dungeon/5491/stt_3.gif">
 <DD><FONT COLOR="#55FFFF"><b>Strike Dash, Heli-Tails, And Flying Dash Attack</b></FONT>
 <DD><blockquote>First introduced in <i><b>Sonic Triple Trouble</i></b>, these trio of moves were first introduced in the VERY popular game for Sega Game Gear! The first being a handy modification of the Peel-Out (known as the Strike Dash, exactly like the Peel-Out except without the cool figure-eight effect, and Sonic is invincible for a short while after performing the move), and the Heli-Tails - an also invincible "Super Flight Mode" for tails, in which his Flight power is increased for a limited period of time! On top of this, an incredibly handy new move was added: the Flying Spin Attack. By pressing Button 1 or 2 after bouncing off a spring, your character (Sonic or Tails) would perform a short Spin, handy for smashing flying Badniks who would otherwise take your Rings in your vulnerable spring-bounce position. 
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.emulationzone.org/sonichq/images/snow.jpg" align=left>
-<IMG SRC="http://www.emulationzone.org/sonichq/images/sonicb2.gif" align=right>
+<DT><IMG SRC="/sonichq/emuzone/images/snow.jpg" align=left>
+<IMG SRC="/sonichq/emuzone/images/sonicb2.gif" align=right>
 <DD><FONT COLOR="#55FFFF"><b>Snowboard (Sonic Only)</b></FONT>
 <DD><blockquote>First introduced in <i><b>Sonic 3</i></b> as more of a showy section of the Ice Cap Zone, Sonic skidded down hills at breakneck speed loading up on rings and whatnot. NOW however with <i>Sonic Adventure</i> you actually get to CONTROL Sonic on your return to the Ice Caps.
 <P></blockquote><HR>
-<DT> <IMG SRC="http://www.geocities.com/TimesSquare/Dungeon/5491/son3_4.gif">
+<DT> <IMG SRC="https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/Dungeon/5491/son3_4.gif">
 <DD><FONT COLOR="#55FFFF"><b>Flame Dash (Sonic Only)</b></FONT>
 <DD><blockquote>Pictured above is the Flame Shield. First introduced in <b><i>Sonic 3</i></b>, the Flame Dash can be done ONLY with a Flame Shield and ONLY by Sonic. This move allows Sonic to turn into a giant ball of fire as well as having him be able to repel regular fire attacks
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.geocities.com/TimesSquare/Dungeon/5491/son3_5.gif">
+<DT><IMG SRC="https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/Dungeon/5491/son3_5.gif">
 <DD><FONT COLOR="#55FFFF"><b>Bounce Attack (Sonic Only)</b></FONT>
 <DD><blockquote>Pictured above is the Water Shield. First introduced in <b><i>Sonic 3</i></b>, the Bounce Attack can be done ONLY with a Water Shield and ONLY by Sonic. This move allows Sonic to use his Water Shield to jump at heights he normally could not reach.
 <P></blockquote><HR>
-<DT><IMG SRC="http://www.geocities.com/TimesSquare/Dungeon/5491/son3_7.gif">
+<DT><IMG SRC="https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/Dungeon/5491/son3_7.gif">
 <DD><FONT COLOR="#55FFFF"><b>Double Jump (Sonic Only)</b></FONT>
 <DD><blockquote>Pictured above is the Electricity Shield. First introduced in <b><i>Sonic 3</i>, the Double Jump can be done ONLY with a Electricity Shield and ONLY by Sonic. This move allows Sonic to double jump and get at heights he normally could not reach - but he doesn't jump as high as he would with a Bounce Attack.
 <P></blockquote><HR>
@@ -180,7 +180,7 @@
 <p><p>Continue to the next page - if so, click on the picture to continue! If not, click the back button to return to the main menu.
 
 
-<p><A HREF="http://www.emulationzone.org/sonichq/games/gameplay/weapons.html"><IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/wbksrelax.gif" ALT="Continue To The Next Page: Weapons And Items !!!"></a>
+<p><A HREF="/sonichq/emuzone/games/gameplay/weapons.html"><IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/wbksrelax.gif" ALT="Continue To The Next Page: Weapons And Items !!!"></a>
 
 
 
