--- a/sonichq/emuzone/games/legends/legends.html
+++ b/sonichq/emuzone/games/legends/legends.html
@@ -4,12 +4,12 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#000000" text="#330066" link="#003333" vlink="#009933" background="http://www.geocities.com/EnchantedForest/Dell/6657/clouds.jpg" bgproperties=fixed>
-<embed src="http://www.geocities.com/EnchantedForest/Dell/6657/dkc2hive.mid" autostart="true" hidden="true" loop="true">
+<body bgcolor="#000000" text="#330066" link="#003333" vlink="#009933" background="/sonichq/geocities/EnchantedForest/Dell/6657/clouds.jpg" bgproperties=fixed>
+<embed src="/sonichq/geocities/EnchantedForest/Dell/6657/dkc2hive.mid" autostart="true" hidden="true" loop="true">
 
 <table border="0" cellspacing="0" cellpadding="8"><tr><td>
 
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/sonjam0.gif"></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/sonjam0.gif"></center>
 
 <p align><b>Once in a blue moon comes something so innovative and so special you have to wonder JUST WHAT the story is behind it. In fact it can become so special that over time it can form what many call "A Legend".</p>
 
@@ -21,7 +21,7 @@
 <p>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/legends.jpg" alt="The Games Gallery: Legends Of A Blue Blur"></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/legends.jpg" alt="The Games Gallery: Legends Of A Blue Blur"></center>
 </TD></TR></TABLE>
 </p>
 </center>
@@ -34,7 +34,7 @@
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#ccccff"> <font face="Lucida Console" color="#000066"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> Whirled History !!!<img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> Whirled History !!!<img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
@@ -49,7 +49,7 @@
 <center>
 <p><b>Page One - History Of A Blue Blur !!!</p></b></center>
 
-<CENTER><b><img src="http://www.geocities.com/EnchantedForest/Dell/6657/splash2.jpg" alt="Sonic Team Presents...."></CENTER>
+<CENTER><b><img src="/sonichq/geocities/EnchantedForest/Dell/6657/splash2.jpg" alt="Sonic Team Presents...."></CENTER>
 </TD>
 </TD></TR></TABLE>
 <b>
@@ -59,7 +59,7 @@ The history of the "blue hedgehog with an attitude" is a rich and varied one. In
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/phantasy.jpg" alt="Phantasy Star 4" align=right></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/phantasy.jpg" alt="Phantasy Star 4" align=right></center>
 </TD></TR></TABLE>
 </p>
 </center>
@@ -71,7 +71,7 @@ The history of the "blue hedgehog with an attitude" is a rich and varied one. In
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/son2cut.jpg" alt="Sonic 2" align=right></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/son2cut.jpg" alt="Sonic 2" align=right></center>
 </TD></TR></TABLE>
 </p>
 </center>
@@ -83,7 +83,7 @@ At this point, Sega was searching vehemently to find a way to hold on to that ma
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/sega_cd.gif" alt="The Sega CD" align=right></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/sega_cd.gif" alt="The Sega CD" align=right></center>
 </TD></TR></TABLE>
 </p>
 </center>
@@ -100,7 +100,7 @@ At this point, Sega was searching vehemently to find a way to hold on to that ma
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#ccccff"> <font face="Lucida Console" color="#000066"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> The Fall From Grace....<img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> The Fall From Grace....<img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
@@ -110,7 +110,7 @@ At this point, Sega was searching vehemently to find a way to hold on to that ma
 <br>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/sth2oilocean.gif" alt="Shot Down In His Prime...."></a></b>
+<center> <IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/sth2oilocean.gif" alt="Shot Down In His Prime...."></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 <b>
@@ -120,7 +120,7 @@ Next in the sonic series came Sonic 3 which introduced the well known Knuckles T
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/sth_4.gif" alt="The Ice Cap Zone"></a></b>
+<center> <IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/sth_4.gif" alt="The Ice Cap Zone"></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 
@@ -128,7 +128,7 @@ Next in the sonic series came Sonic 3 which introduced the well known Knuckles T
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/panicpuppetthumb.jpg" alt="The Panic Puppet Zone"></a></b>
+<center> <IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/panicpuppetthumb.jpg" alt="The Panic Puppet Zone"></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 
@@ -143,7 +143,7 @@ Next in the sonic series came Sonic 3 which introduced the well known Knuckles T
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#ccccff"> <font face="Lucida Console" color="#000066"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif">The Comeback Kid...<img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif">The Comeback Kid...<img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
@@ -153,7 +153,7 @@ Next in the sonic series came Sonic 3 which introduced the well known Knuckles T
 <br>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.dimension-s.com/images/sega-news/nov98/image1.jpg" alt="Sonic's Back In Town !!!!!! And Its A Whale Of A Tale To Tell...."></a></b>
+<center> <IMG SRC="https://web.archive.org/20011101000000/http://www.dimension-s.com/images/sega-news/nov98/image1.jpg" alt="Sonic's Back In Town !!!!!! And Its A Whale Of A Tale To Tell...."></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 <b>
@@ -163,7 +163,7 @@ After he finished NiGHTS Into Dreams, Yuji Naka began what is now known as Sonic
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.dimension-s.com/images/sega-news/nov98/image5.jpg" alt="Marching Towards Victory...."></a></b>
+<center> <IMG SRC="https://web.archive.org/20011101000000/http://www.dimension-s.com/images/sega-news/nov98/image5.jpg" alt="Marching Towards Victory...."></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 
@@ -177,7 +177,7 @@ After he finished NiGHTS Into Dreams, Yuji Naka began what is now known as Sonic
 <center>
 <p>Click below for our next section - The Sonic Timeline....</p></center>
 
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/tbbutton.gif"></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/tbbutton.gif"></center>
 <br>
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
@@ -185,7 +185,7 @@ After he finished NiGHTS Into Dreams, Yuji Naka began what is now known as Sonic
 <center>
 <p><b>Page Two - The Career Continuim !!! </b></p></center>
 
-<CENTER><a href="legends2.html"><img src="http://www.geocities.com/EnchantedForest/Dell/6657/splash2.jpg" alt="The Big Three"></CENTER></a>
+<CENTER><a href="legends2.html"><img src="/sonichq/geocities/EnchantedForest/Dell/6657/splash2.jpg" alt="The Big Three"></CENTER></a>
 </TD>
 
 </TD></TR></TABLE>
