--- a/sonichq/emuzone/games/links.html
+++ b/sonichq/emuzone/games/links.html
@@ -9,8 +9,8 @@
 
 <body text="#000000" bgcolor="white" link=purple vlink=purple background="../images/backgrounds/TailsGrayBG.gif"><center>
 &nbsp;
-<p><a href=http://members.spree.com/funNgames/segasonic/petition.html>
-<img src=http://members.spree.com/funNgames/segasonic/petition/raybanner.jpg><br>
+<p><a href=https://web.archive.org/20011101000000/http://members.spree.com/funNgames/segasonic/petition.html>
+<img src=https://web.archive.org/20011101000000/http://members.spree.com/funNgames/segasonic/petition/raybanner.jpg><br>
 Sign the petition to bring SegaSonic the Hedgehog to an international audience!</a><p>
 
 <!main table top>
@@ -18,7 +18,7 @@ Sign the petition to bring SegaSonic the Hedgehog to an international audience!<
 <tr><td width=19><img src=../topleft.gif width=19></td>
 
 <td align=right valign=middle bgcolor=black width=100%>
-<script language="JavaScript" src=http://www.emulationzone.org/sonichq/scripts/titlebar-rand.js></script>
+<script language="JavaScript" src=/sonichq/emuzone/scripts/titlebar-rand.js></script>
 <font size=6 face=Andes,Verdana color=e04fe0>Gaming Info Links</a></td>
 
 <td width=19><img src=../topright.gif width=19></td></tr>
@@ -38,13 +38,13 @@ Sign the petition to bring SegaSonic the Hedgehog to an international audience!<
 <td VALIGN=TOP WIDTH=2 BGCOLOR=e04fe0>&nbsp;</td>
 <td colspan=2 VALIGN=TOP BGCOLOR=e04fe0>
 <font face=Arial size=-1 color=FFFFFF>
-<a href=http://members.spree.com/funNgames/segasonic/petition.html><font color=ffffff><b>The Sonic Jam 2 Petition</b></font></a></font>
+<a href=https://web.archive.org/20011101000000/http://members.spree.com/funNgames/segasonic/petition.html><font color=ffffff><b>The Sonic Jam 2 Petition</b></font></a></font>
 </td></tr>
 
 <tr>
 <td VALIGN=TOP WIDTH=2 BGCOLOR=e04fe0>&nbsp;</td>
 <td><font face=Arial size=-1>
-Would you like to see SegaSonic the Hedgehog (Arcade), Knuckles' Chaotix, Sonic CD, and Sonic the Fighters released on a collection CD?  Then go here and sign the petition!  This petition is hosted by <a href=http://members.spree.com/funNgames/segasonic/>The SegaSonic Station</a>.
+Would you like to see SegaSonic the Hedgehog (Arcade), Knuckles' Chaotix, Sonic CD, and Sonic the Fighters released on a collection CD?  Then go here and sign the petition!  This petition is hosted by <a href=https://web.archive.org/20011101000000/http://members.spree.com/funNgames/segasonic/>The SegaSonic Station</a>.
 </font></td>
 <td VALIGN=TOP WIDTH=2 BGCOLOR=e04fe0>&nbsp;</td>
 </tr>
@@ -53,7 +53,7 @@ Would you like to see SegaSonic the Hedgehog (Arcade), Knuckles' Chaotix, Sonic 
 <td VALIGN=TOP WIDTH=2 BGCOLOR=e04fe0>&nbsp;</td>
 <td colspan=2 VALIGN=TOP BGCOLOR=e04fe0>
 <font face=Arial size=-1 color=FFFFFF>
-<a href=http://www.bravenet.com/guestbook/show.asp?userid=bc123304><font color=ffffff><b>The Sonic Championship Petition</b></font></a></font>
+<a href=https://web.archive.org/20011101000000/http://www.bravenet.com/guestbook/show.asp?userid=bc123304><font color=ffffff><b>The Sonic Championship Petition</b></font></a></font>
 </td></tr>
 
 <tr>
@@ -68,7 +68,7 @@ Another petition for Sonic the Fighters.  This one is specifically for that game
 <td VALIGN=TOP WIDTH=2 BGCOLOR=e04fe0>&nbsp;</td>
 <td colspan=2 VALIGN=TOP BGCOLOR=e04fe0>
 <font face=Arial size=-1 color=FFFFFF>
-<a href=http://www.videogamers.com/ggibbon/><font color=ffffff><b>Neo Green Hill Zone</b></font></a></font>
+<a href=https://web.archive.org/20011101000000/http://www.videogamers.com/ggibbon/><font color=ffffff><b>Neo Green Hill Zone</b></font></a></font>
 </td></tr>
 
 <tr>
@@ -83,13 +83,13 @@ This is an excellent site with tons of gaming info.
 <td VALIGN=TOP WIDTH=2 BGCOLOR=e04fe0>&nbsp;</td>
 <td colspan=2 VALIGN=TOP BGCOLOR=e04fe0>
 <font face=Arial size=-1 color=FFFFFF>
-<a href=http://www.geocities.com/TimesSquare/Arcade/3996/strybrd.html><font color=ffffff><b>Original Story Board Pictures</b></font></a></font>
+<a href=https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/Arcade/3996/strybrd.html><font color=ffffff><b>Original Story Board Pictures</b></font></a></font>
 </td></tr>
 
 <tr>
 <td VALIGN=TOP WIDTH=2 BGCOLOR=e04fe0>&nbsp;</td>
 <td><font face=Arial size=-1>
-An interesting collection of pics used by Sonic Team to plan Sonic 1.  This page is part of <a href=http://www.geocities.com/TimesSquare/Arcade/3996/sonic.html>The Super Sonic Speedway</a>.
+An interesting collection of pics used by Sonic Team to plan Sonic 1.  This page is part of <a href=https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/Arcade/3996/sonic.html>The Super Sonic Speedway</a>.
 </font></td>
 <td VALIGN=TOP WIDTH=2 BGCOLOR=e04fe0>&nbsp;</td>
 </tr>
@@ -98,7 +98,7 @@ An interesting collection of pics used by Sonic Team to plan Sonic 1.  This page
 <td VALIGN=TOP WIDTH=2 BGCOLOR=e04fe0>&nbsp;</td>
 <td colspan=2 VALIGN=TOP BGCOLOR=e04fe0>
 <font face=Arial size=-1 color=FFFFFF>
-<a href=http://www.sega.com/spotlight/features/allsonic/><font color=ffffff><b>All About Sonic!</b></font></a></font>
+<a href=https://web.archive.org/20011101000000/http://www.sega.com/spotlight/features/allsonic/><font color=ffffff><b>All About Sonic!</b></font></a></font>
 </td></tr>
 
 <tr>
@@ -113,7 +113,7 @@ This is the official Sonic page at sega.com.  It includes some brief history and
 <td VALIGN=TOP WIDTH=2 BGCOLOR=e04fe0>&nbsp;</td>
 <td colspan=2 VALIGN=TOP BGCOLOR=e04fe0>
 <font face=Arial size=-1 color=FFFFFF>
-<a href=http://www.din.or.jp/~koryan/sonic/s.htm><font color=ffffff><b>Sonic Island</b></font></a></font>
+<a href=https://web.archive.org/20011101000000/http://www.din.or.jp/~koryan/sonic/s.htm><font color=ffffff><b>Sonic Island</b></font></a></font>
 </td></tr>
 
 <tr>
