--- a/sonichq/emuzone/games/mascot/mascot.html
+++ b/sonichq/emuzone/games/mascot/mascot.html
@@ -4,8 +4,8 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#000000" text="#ffcc00" link="#ffffff" vlink="cyan" background="http://www.geocities.com/EnchantedForest/Tower/4309/bluefade9.gif" >
-<embed src="http://www.emulationzone.org/sonichq/images/bg.gif" autostart="true" hidden="true" loop="true">
+<body bgcolor="#000000" text="#ffcc00" link="#ffffff" vlink="cyan" background="/sonichq/geocities/EnchantedForest/Tower/4309/bluefade9.gif" >
+<embed src="/sonichq/emuzone/images/bg.gif" autostart="true" hidden="true" loop="true">
 
 <table border="0" cellspacing="0" cellpadding="8"><tr><td>
 
@@ -19,8 +19,8 @@ Since then many others have followed thier footsteps - from hedgehogs to electri
 <p>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/therealgang.jpg" alt="The Mascot Wars"></center>
-<center><IMG SRC="http://www.emulationzone.org/sonichq/images/mario.jpg" alt="The Mascot Wars"></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/therealgang.jpg" alt="The Mascot Wars"></center>
+<center><IMG SRC="/sonichq/emuzone/images/mario.jpg" alt="The Mascot Wars"></center>
 </TD></TR></TABLE>
 </p>
 </center>
@@ -31,9 +31,9 @@ Since then many others have followed thier footsteps - from hedgehogs to electri
 
 <table cellpadding="8" bgcolor="#ffcccc"><tr><td>
 
-<center><img src="http://www.geocities.com/EnchantedForest/Dell/6657/pjsmini2.gif" width=130 height=200 alt="Sonic HQ: Project Sonic"><br></center>
+<center><img src="/sonichq/geocities/EnchantedForest/Dell/6657/pjsmini2.gif" width=130 height=200 alt="Sonic HQ: Project Sonic"><br></center>
 
-<font color="#990000"> <p align="justify"><font size=-1><b>Copyrights for Sega Games and materials belong to <a href="http://www.sega.com/" target="_blank">Service Games, Inc</a>.</b> Every other videogame character on this page - Mario, Pikachu, Lara Croft, etc, etc etc are copyright thier respective owners. And besides - THIS page is just for fun anyway! Sonic Headquarters has no connections with Sega, Nintendo, Sony or any other gaming-company. It was created by <a href="mailto:zifei@yahoo.com">Zifei Wu</a> and this page is maintained by <a href="mailto:neoblackbat@hotmail.com">Jonathan "WB" Gray</a> . If you want to use text, music or screenshots from Sonic HQ on your website, then we ask that you ask us permission first as it took us quite a bit of hardwork to make it. As long as you credit the site properly and also link to it everything should be OK. On the internet, artwork and original graphics are exclusive to Sonic HQ, so don't use them. For any publication besides the web, please write for permission first. All original material on this site is copyright © 1996-1998 Sonic HQ.</font></p>
+<font color="#990000"> <p align="justify"><font size=-1><b>Copyrights for Sega Games and materials belong to <a href="https://web.archive.org/20011101000000/http://www.sega.com/" target="_blank">Service Games, Inc</a>.</b> Every other videogame character on this page - Mario, Pikachu, Lara Croft, etc, etc etc are copyright thier respective owners. And besides - THIS page is just for fun anyway! Sonic Headquarters has no connections with Sega, Nintendo, Sony or any other gaming-company. It was created by <a href="mailto:zifei@yahoo.com">Zifei Wu</a> and this page is maintained by <a href="mailto:neoblackbat@hotmail.com">Jonathan "WB" Gray</a> . If you want to use text, music or screenshots from Sonic HQ on your website, then we ask that you ask us permission first as it took us quite a bit of hardwork to make it. As long as you credit the site properly and also link to it everything should be OK. On the internet, artwork and original graphics are exclusive to Sonic HQ, so don't use them. For any publication besides the web, please write for permission first. All original material on this site is copyright © 1996-1998 Sonic HQ.</font></p>
 
 </td></tr></table></body></html>
 
@@ -43,7 +43,7 @@ Since then many others have followed thier footsteps - from hedgehogs to electri
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#990000"> <font face="Lucida Console"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> Super Mario Shutdown <img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> Super Mario Shutdown <img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
@@ -53,7 +53,7 @@ Since then many others have followed thier footsteps - from hedgehogs to electri
 <br>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/pigout.jpg" alt="Kiss The Monkey ! You know you want to !"></a></b>
+<center> <IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/pigout.jpg" alt="Kiss The Monkey ! You know you want to !"></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 <b>
@@ -74,7 +74,7 @@ Can you imagine a fight between Doctor Robotnik and Team Rocket? Amy Rose VS Pac
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#990000"> <font face="Lucida Console"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> Lets Get Ready To Rumble !!! <img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> Lets Get Ready To Rumble !!! <img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
@@ -82,10 +82,10 @@ Can you imagine a fight between Doctor Robotnik and Team Rocket? Amy Rose VS Pac
 <font color="#e5e5e5">
 <br>
 
-<TABLE BORDER=1 background="http://www.geocities.com/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
+<TABLE BORDER=1 background="/sonichq/geocities/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
 <br>
 
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/pikapet.jpg" alt="Pika Pika...Pikachu !!!!" align=left>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/pikapet.jpg" alt="Pika Pika...Pikachu !!!!" align=left>
 <center>
 <font color="#990000"> 
 <b><blockquote><u>Round One: Sonic VS Pikachu !!!</u></p></b>
@@ -99,9 +99,9 @@ Can you imagine a fight between Doctor Robotnik and Team Rocket? Amy Rose VS Pac
 </table>
 
 <br>
-<TABLE BORDER=1 background="http://www.geocities.com/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
+<TABLE BORDER=1 background="/sonichq/geocities/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
 <br>
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/supertit.jpg" alt="Greetings, citizen! We're the first season Super Friends! Earth's mightiest heroes banded together to protect the galaxy from evil! Wherever there is injustice, the Super Friends will be there to stop it and provide you with boring stupid lectures that DONT MEAN JACK SH** !" align=left>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/supertit.jpg" alt="Greetings, citizen! We're the first season Super Friends! Earth's mightiest heroes banded together to protect the galaxy from evil! Wherever there is injustice, the Super Friends will be there to stop it and provide you with boring stupid lectures that DONT MEAN JACK SH** !" align=left>
 <center>
 <font color="#990000"> 
 <b><blockquote><u>Round Two: Sonic VS The First Season Superfriends !!!</u></p></b>
@@ -115,9 +115,9 @@ Can you imagine a fight between Doctor Robotnik and Team Rocket? Amy Rose VS Pac
 
 <br>
 <br> 
-<TABLE BORDER=1 background="http://www.geocities.com/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
+<TABLE BORDER=1 background="/sonichq/geocities/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
 <br>
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/crashb.gif" alt="Watch out for me - I'm half naked and I got a laaaaazy eye..." align=left>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/crashb.gif" alt="Watch out for me - I'm half naked and I got a laaaaazy eye..." align=left>
 <center>
 <font color="#990000"> 
 <b><blockquote><u>Round Three: Sonic VS Crash Bandicoot !!!</u></p></b>
@@ -131,9 +131,9 @@ Can you imagine a fight between Doctor Robotnik and Team Rocket? Amy Rose VS Pac
 
 <br>
 <br> 
-<TABLE BORDER=1 background="http://www.geocities.com/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
+<TABLE BORDER=1 background="/sonichq/geocities/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
 <br>
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/Aquaman.jpg" alt="YEAH BABY ! I GOT DEM FISH !!! If you a**holes don't stop laughing at me, I'll...wait for you to fall into the ocean. Then you're mine, baby! I'll stick an electric eel up your ***censored***" align=left>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/Aquaman.jpg" alt="YEAH BABY ! I GOT DEM FISH !!! If you a**holes don't stop laughing at me, I'll...wait for you to fall into the ocean. Then you're mine, baby! I'll stick an electric eel up your ***censored***" align=left>
 <center>
 <font color="#990000"> 
 <b><blockquote><u>Round Four: Sonic VS Aquaman!!!</u></p></b>
@@ -147,9 +147,9 @@ Can you imagine a fight between Doctor Robotnik and Team Rocket? Amy Rose VS Pac
 
 <br>
 <br> 
-<TABLE BORDER=1 background="http://www.geocities.com/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
+<TABLE BORDER=1 background="/sonichq/geocities/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
 <br>
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/pigout.jpg" alt="Oh yeah, Darien is REALLY wanting you looking like THAT...." align=left>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/pigout.jpg" alt="Oh yeah, Darien is REALLY wanting you looking like THAT...." align=left>
 <center>
 <font color="#990000"> 
 <b><blockquote><u>Round Five: Sonic VS Sailor Moon !!!</u></p></b>
@@ -163,9 +163,9 @@ Can you imagine a fight between Doctor Robotnik and Team Rocket? Amy Rose VS Pac
 
 <br>
 <br> 
-<TABLE BORDER=1 background="http://www.geocities.com/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
+<TABLE BORDER=1 background="/sonichq/geocities/EnchantedForest/Tower/4309/cutesy1.jpg" bgproperties=fixed><tr><td>
 <br>
-<img src="http://www.geocities.com/EnchantedForest/Tower/4309/lara108.jpg" alt="All wet..." align=left>
+<img src="/sonichq/geocities/EnchantedForest/Tower/4309/lara108.jpg" alt="All wet..." align=left>
 <center>
 <font color="#990000"> 
 <b><blockquote><u>Round Five: Sonic VS Lara Croft!!!</u></p></b>
