--- a/sonichq/emuzone/main/email.htm
+++ b/sonichq/emuzone/main/email.htm
@@ -24,7 +24,7 @@
 
 
 
-<body text="#000000" bgcolor="white" link=blue vlink=blue background="http://www.emulationzone.org/sonichq/images/backgrounds/KnuxGrayBG.gif">
+<body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/emuzone/images/backgrounds/KnuxGrayBG.gif">
 &nbsp;
 <center>
 
@@ -33,17 +33,17 @@
 <a name=email></a>
 <p><table bgcolor=white width=350 border=1 cellspacing=0 cellpadding=2 bordercolorlight=595959 bordercolordark=black><tr><td colspan=2><center>Get a Free E-Mail Address</center></td></tr>
 <tr><td><center>
-<a href="http://Chaotix.zzn.com">
-<img src="http://www.zzn.com/informail/images/but_service_English.gif" border="0" alt="Get a Free E-mail Address"><br>chaotix.zzn.com</a>
+<a href="https://web.archive.org/20011101000000/http://Chaotix.zzn.com">
+<img src="https://web.archive.org/20011101000000/http://www.zzn.com/informail/images/but_service_English.gif" border="0" alt="Get a Free E-mail Address"><br>chaotix.zzn.com</a>
 </center></td>
 <td><center>
-<a href="http://Knothole.zzn.com">
-<img src="http://www.zzn.com/informail/images/but_service_English.gif" border="0" alt="Get a Free E-mail Address"><br>knothole.zzn.com</a>
+<a href="https://web.archive.org/20011101000000/http://Knothole.zzn.com">
+<img src="https://web.archive.org/20011101000000/http://www.zzn.com/informail/images/but_service_English.gif" border="0" alt="Get a Free E-mail Address"><br>knothole.zzn.com</a>
 </center></td></tr>
-<!-- <tr><td colspan=2><center>Other Sonic E-Mail domains, not affiliated with Sonic HQ, also exist: <a href=http://sonicrules.zzn.com>sonicrules.zzn.com</a> and <a href=http://tailsfan.zzn.com>tailsfan.zzn.com</a>.</center></td></tr> -->
+<!-- <tr><td colspan=2><center>Other Sonic E-Mail domains, not affiliated with Sonic HQ, also exist: <a href=https://web.archive.org/20011101000000/http://sonicrules.zzn.com>sonicrules.zzn.com</a> and <a href=https://web.archive.org/20011101000000/http://tailsfan.zzn.com>tailsfan.zzn.com</a>.</center></td></tr> -->
 </table>
 
-<p><form method="POST" action="http://Chaotix.zzn.com/email/login/loginaction.asp" name="login">
+<p><form method="POST" action="https://web.archive.org/20011101000000/http://Chaotix.zzn.com/email/login/loginaction.asp" name="login">
 <input type="hidden" name="company" value="Chaotix">
 <input type="hidden" name="Interface" value="0">
 <table border=1 cellspacing=0 cellpadding=0 bordercolorlight=595959 bordercolordark=black><td>
@@ -54,7 +54,7 @@
 		<b>&nbsp;Login to Chaotix mail </b></font>
  		</td>
 	</tr>
-	<tr><td colspan="3" BGcolor="#ffffff"><img src="http://Chaotix.zzn.com/email/images/spacer2.gif" border="0" width="350" height="1"></td></tr>
+	<tr><td colspan="3" BGcolor="#ffffff"><img src="https://web.archive.org/20011101000000/http://Chaotix.zzn.com/email/images/spacer2.gif" border="0" width="350" height="1"></td></tr>
 	<tr>
 		<td BGcolor="#ffffff"><font face="arial" size="2" color="#000000"><b>&nbsp;User Name:</b></font>
 		</td>
@@ -69,7 +69,7 @@
 		<td BGcolor="#ffffff">&nbsp;<input type="password" name="loginpassword" size="10">
 		</td>
 		<td BGcolor="#ffffff" width="80" align="right">
-			<input type="image" name="Log_in" src="http://Chaotix.zzn.com/email/images/btn_lgn.gif" alt="Login" border="0">
+			<input type="image" name="Log_in" src="https://web.archive.org/20011101000000/http://Chaotix.zzn.com/email/images/btn_lgn.gif" alt="Login" border="0">
 		</td>
 	</tr>
 	<tr>
@@ -78,20 +78,20 @@
 		<tr>
 			<td>
 			<font size="1" face="Arial,Geneva" color="#808080">
-			<a href="http://Chaotix.zzn.com/email/TSupport/start.asp?Company=zzn&subdomain=Chaotix&EIP=0" target="_self">Technical Support</a>			
+			<a href="https://web.archive.org/20011101000000/http://Chaotix.zzn.com/email/TSupport/start.asp?Company=zzn&subdomain=Chaotix&EIP=0" target="_self">Technical Support</a>			
 			</font>
 			</td>
 			
 			<td align="center">
 			<font size="1" face="Arial,Geneva" color="#808080">
-			<a href="http://Chaotix.zzn.com/email/noframes/help/p_help.html"
+			<a href="https://web.archive.org/20011101000000/http://Chaotix.zzn.com/email/noframes/help/p_help.html"
 			target="_blank">Help</a>
 			</font>
 			</td>
 
 			<td align="right" BGcolor="#ffffff">
 			<font size="1" face="Arial,Geneva" color="#808080">
-			<a href="http://Chaotix.zzn.com/email/login/HintLogin.asp?Company=Chaotix&amp;Interface=0"
+			<a href="https://web.archive.org/20011101000000/http://Chaotix.zzn.com/email/login/HintLogin.asp?Company=Chaotix&amp;Interface=0"
 				target="_self">Password Reminder</a>
 			</font>
 			</td>
@@ -102,7 +102,7 @@
 	</TABLE>
 </td></table></form>
 
-<form method="POST" action="http://Knothole.zzn.com/email/login/loginaction.asp" name="login">
+<form method="POST" action="https://web.archive.org/20011101000000/http://Knothole.zzn.com/email/login/loginaction.asp" name="login">
 <input type="hidden" name="company" value="Knothole">
 <input type="hidden" name="Interface" value="0">
 <table border=1 cellspacing=0 cellpadding=0 bordercolorlight=595959 bordercolordark=black><td>
@@ -113,7 +113,7 @@
 		<b>&nbsp;Login to Knothole mail </b></font>
  		</td>
 	</tr>
-	<tr><td colspan="3" BGcolor="#ffffff"><img src="http://Knothole.zzn.com/email/images/spacer2.gif" border="0" width="350" height="1"></td></tr>
+	<tr><td colspan="3" BGcolor="#ffffff"><img src="https://web.archive.org/20011101000000/http://Knothole.zzn.com/email/images/spacer2.gif" border="0" width="350" height="1"></td></tr>
 	<tr>
 		<td BGcolor="#ffffff"><font face="arial" size="2" color="#000000"><b>&nbsp;User Name:</b></font>
 		</td>
@@ -128,7 +128,7 @@
 		<td BGcolor="#ffffff">&nbsp;<input type="password" name="loginpassword" size="10">
 		</td>
 		<td BGcolor="#ffffff" width="80" align="right">
-			<input type="image" name="Log_in" src="http://Knothole.zzn.com/email/images/btn_lgn.gif" alt="Login" border="0">
+			<input type="image" name="Log_in" src="https://web.archive.org/20011101000000/http://Knothole.zzn.com/email/images/btn_lgn.gif" alt="Login" border="0">
 		</td>
 	</tr>
 	<tr>
@@ -137,20 +137,20 @@
 		<tr>
 			<td>
 			<font size="1" face="Arial,Geneva" color="#808080">
-			<a href="http://Knothole.zzn.com/email/TSupport/start.asp?Company=zzn&subdomain=Knothole&EIP=0" target="_self">Technical Support</a>			
+			<a href="https://web.archive.org/20011101000000/http://Knothole.zzn.com/email/TSupport/start.asp?Company=zzn&subdomain=Knothole&EIP=0" target="_self">Technical Support</a>			
 			</font>
 			</td>
 			
 			<td align="center">
 			<font size="1" face="Arial,Geneva" color="#808080">
-			<a href="http://Knothole.zzn.com/email/noframes/help/p_help.html"
+			<a href="https://web.archive.org/20011101000000/http://Knothole.zzn.com/email/noframes/help/p_help.html"
 			target="_blank">Help</a>
 			</font>
 			</td>
 
 			<td align="right" BGcolor="#ffffff">
 			<font size="1" face="Arial,Geneva" color="#808080">
-			<a href="http://Knothole.zzn.com/email/login/HintLogin.asp?Company=Knothole&amp;Interface=0"
+			<a href="https://web.archive.org/20011101000000/http://Knothole.zzn.com/email/login/HintLogin.asp?Company=Knothole&amp;Interface=0"
 				target="_self">Password Reminder</a>
 			</font>
 			</td>
