--- a/sonichq/emuzone/store/sonicstore.htm
+++ b/sonichq/emuzone/store/sonicstore.htm
@@ -29,12 +29,12 @@
 <td VALIGN=TOP WIDTH="130" BGCOLOR="#003264" BACKGROUND="tbback.gif"><b><font face="Arial"><font color="#FFFFFF"><font size=-1>Stuff</font></font></font></b>
 <center><img SRC="knux.gif" ></center>
 
-<p><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="http://207.244.122.48/discussion.cgi?id=3252">Sonic
+<p><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="https://web.archive.org/20011101000000/http://207.244.122.48/discussion.cgi?id=3252">Sonic
 Trade Forum</a></font></font></font>
-<br><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="http://shop.affinia.com/alligator/Store1/">Store
+<br><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="https://web.archive.org/20011101000000/http://shop.affinia.com/alligator/Store1/">Store
 @ Sonic HQ</a></font></font></font>
-<br><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="http://store.sega.com/dr/v2/ec_MAIN.Entry10?SP=10024&PN=16&V1=34863&xid=20381">SA Plushies</a></font></font></font>
-<br><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="http://www.resaurus.com/sonic-adventure/sonicmain.shtml">SA Action Figures</a></font></font></font>
+<br><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="https://web.archive.org/20011101000000/http://store.sega.com/dr/v2/ec_MAIN.Entry10?SP=10024&PN=16&V1=34863&xid=20381">SA Plushies</a></font></font></font>
+<br><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="https://web.archive.org/20011101000000/http://www.resaurus.com/sonic-adventure/sonicmain.shtml">SA Action Figures</a></font></font></font>
 <br><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="../images/merchandise">Sonic
 Merchandise Pics</a></font></font></font>
 <br><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="../main.htm">Sonic HQ Main</a></font></font></font>
@@ -48,7 +48,7 @@ Merchandise Pics</a></font></font></font>
 <tr>
 <td VALIGN=TOP WIDTH="2" BGCOLOR="#595959">&nbsp;</td>
 
-<td VALIGN=TOP WIDTH="450" BGCOLOR="#595959"><b><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="http://207.244.122.48/discussion.cgi?id=3252">Sonic
+<td VALIGN=TOP WIDTH="450" BGCOLOR="#595959"><b><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="https://web.archive.org/20011101000000/http://207.244.122.48/discussion.cgi?id=3252">Sonic
 Trade Forum</a></font></font></font></b></td>
 
 <td VALIGN=TOP WIDTH="2" BGCOLOR="#595959">&nbsp;</td>
@@ -67,7 +67,7 @@ anything related to Sonic here.&nbsp;</font></font></td>
 <tr>
 <td VALIGN=TOP WIDTH="2" BGCOLOR="#595959">&nbsp;</td>
 
-<td VALIGN=TOP WIDTH="450" BGCOLOR="#595959"><b><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="http://shop.affinia.com/alligator/Store1/">Store
+<td VALIGN=TOP WIDTH="450" BGCOLOR="#595959"><b><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="https://web.archive.org/20011101000000/http://shop.affinia.com/alligator/Store1/">Store
 @ Sonic HQ</a></font></font></font></b></td>
 
 <td VALIGN=TOP WIDTH="2" BGCOLOR="#595959">&nbsp;</td>
@@ -85,7 +85,7 @@ page includes a large assortment of Sonic merchandise and video gaming merchandi
 <tr>
 <td VALIGN=TOP WIDTH="2" BGCOLOR="#595959">&nbsp;</td>
 
-<td VALIGN=TOP WIDTH="450" BGCOLOR="#595959"><b><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="http://store.sega.com/dr/v2/ec_MAIN.Entry10?SP=10024&PN=16&V1=34863&xid=20381">Sonic
+<td VALIGN=TOP WIDTH="450" BGCOLOR="#595959"><b><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="https://web.archive.org/20011101000000/http://store.sega.com/dr/v2/ec_MAIN.Entry10?SP=10024&PN=16&V1=34863&xid=20381">Sonic
 Adventure Plushies</a></font></font></font></b></td>
 
 <td VALIGN=TOP WIDTH="2" BGCOLOR="#595959">&nbsp;</td>
@@ -103,7 +103,7 @@ page includes the Sonic Adventure Plushies.&nbsp;</font></font></td>
 <tr>
 <td VALIGN=TOP WIDTH="2" BGCOLOR="#595959">&nbsp;</td>
 
-<td VALIGN=TOP WIDTH="450" BGCOLOR="#595959"><b><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="http://www.resaurus.com/sonic-adventure/sonicmain.shtml">Sonic
+<td VALIGN=TOP WIDTH="450" BGCOLOR="#595959"><b><font face="Arial"><font color="#FFFFFF"><font size=-1><a href="https://web.archive.org/20011101000000/http://www.resaurus.com/sonic-adventure/sonicmain.shtml">Sonic
 Adventure Action Figures</a></font></font></font></b></td>
 
 <td VALIGN=TOP WIDTH="2" BGCOLOR="#595959">&nbsp;</td>
