--- a/sonichq/emuzone/games/SonicAdventure/briefing.html
+++ b/sonichq/emuzone/games/SonicAdventure/briefing.html
@@ -4,14 +4,14 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#000000" text="#ccccff" link="#ffcc00" vlink="#009933" background="http://www.geocities.com/EnchantedForest/Tower/4309/fedbag.gif" bgproperties=fixed>
-<embed src="http://www.geocities.com/EnchantedForest/Tower/4309/Arctic.mid" autostart="true" hidden="true" loop="true">
+<body bgcolor="#000000" text="#ccccff" link="#ffcc00" vlink="#009933" background="/sonichq/geocities/EnchantedForest/Tower/4309/fedbag.gif" bgproperties=fixed>
+<embed src="/sonichq/geocities/EnchantedForest/Tower/4309/Arctic.mid" autostart="true" hidden="true" loop="true">
 
 <center>
 <p>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center><IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/sonicadventure_logo.gif" alt="The Games Gallery: Sonic Adventure !!!"></center>
+<center><IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/sonicadventure_logo.gif" alt="The Games Gallery: Sonic Adventure !!!"></center>
 </TD></TR></TABLE>
 </p>
 </center>
@@ -23,7 +23,7 @@
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#990000"> <font face="Lucida Console" color="#ffcc00"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> Your Mission - Should You Choose To Accept It... <img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> Your Mission - Should You Choose To Accept It... <img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
@@ -33,7 +33,7 @@
 <br>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/chao0.gif" alt="Happy Happy Joy Joy!!!"></a></b>
+<center> <IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/chao0.gif" alt="Happy Happy Joy Joy!!!"></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 <b>
@@ -48,14 +48,14 @@
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#990000"> <font face="Lucida Console" color="#ffcc00"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> Characters And Zones... <img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> Characters And Zones... <img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
 <br>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/04.jpg" alt="Station Square Is All Wet..."></a></b>
+<center> <IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/04.jpg" alt="Station Square Is All Wet..."></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 <b>
@@ -70,7 +70,7 @@
 <br>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/11.jpg" alt="So Amy? Who Was That Robot I Saw You With Last Night?"></a></b>
+<center> <IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/11.jpg" alt="So Amy? Who Was That Robot I Saw You With Last Night?"></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 <b>
@@ -84,7 +84,7 @@
 <br>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/02.jpg" alt="Sonic Quest !!!"></a></b>
+<center> <IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/02.jpg" alt="Sonic Quest !!!"></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 <b>
@@ -95,7 +95,7 @@
 <br>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<center> <IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/sonic1.gif" alt="Are You Ready To Rock?"></a></b>
+<center> <IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/sonic1.gif" alt="Are You Ready To Rock?"></a></b>
 </a></b></center>
 </TD></TR></TABLE>
 <b>
@@ -103,7 +103,7 @@
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#990000"> <font face="Lucida Console" color="#ffcc00"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> Fan Reviews <img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> Fan Reviews <img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 <p align=center>Our first comes from <a href="mailto:"pthumble@access1.net">Segaholic2</a>:
