--- a/sonichq/emuzone/games/gameplay/generalinfo.html
+++ b/sonichq/emuzone/games/gameplay/generalinfo.html
@@ -4,14 +4,14 @@
 <STYLE TYPE="TEXT/CSS"><!--A { TEXT-DECORATION: NONE }//-->
 </STYLE>
 </head>
-<body bgcolor="#000000" text="#ffd700" link="#990000" vlink="#009933" background="http://www.emulationzone.org/sonichq/images/starrystreak.gif">
-<embed src="http://www.geocities.com/EnchantedForest/Tower/4309/C-sidetw_2.mid" autostart="true" hidden="true" loop="true"><br><CENTER>
+<body bgcolor="#000000" text="#ffd700" link="#990000" vlink="#009933" background="/sonichq/emuzone/images/starrystreak.gif">
+<embed src="/sonichq/geocities/EnchantedForest/Tower/4309/C-sidetw_2.mid" autostart="true" hidden="true" loop="true"><br><CENTER>
 
 
 <H1><u>Sonic Gameplay</u></H1>
 <br>
 
-<IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/sonicjump2.gif" ALT="Jumping Into Action!..." align="center">
+<IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/sonicjump2.gif" ALT="Jumping Into Action!..." align="center">
 
 <br>
 <br>
@@ -19,7 +19,7 @@
 <table border="0" width="100%">
   <tr>
     <td align="right" bgcolor="#990000"> <font face="Lucida Console" color="#ffcc00"><span
-    style="font-family: Times New Roman"><strong><center><img src="http://members.tripod.com/~warpsonic/ring.gif"> The Dimensional Interface....<img src="http://members.tripod.com/~warpsonic/ring.gif"> <center></strong></span></font></td>
+    style="font-family: Times New Roman"><strong><center><img src="/sonichq/tripod/warpsonic/ring.gif"> The Dimensional Interface....<img src="/sonichq/tripod/warpsonic/ring.gif"> <center></strong></span></font></td>
   </tr>
 </table>
 
@@ -28,7 +28,7 @@
 
 
 <H3><u><br><br><A NAME="2D">2D And 3D Gameplay</u></H3></b>
-<img src="http://www.geocities.com/EnchantedForest/Dell/7834/bluebar.jpg">
+<img src="/sonichq/geocities/EnchantedForest/Dell/7834/bluebar.jpg">
 
 
 <b><p>Most sidescroller levels travel from left to right. Sonic however must do this as well as travel through loops, corkscrews, and other various "natural" elements that will test his use of speed. The main goal however, for all the games, is to get through the levels, battle the midbosses (if there are any) and defeat Doc Robotnik (or Doctor Eggman in Japan) and one of his various mechs which serve as the boss that closes the level. There, he must face off in a one-to-one battle in an enclosed room, where the battle does not end until one of the two combatants is destroyed. 
@@ -36,12 +36,12 @@ Should Sonic perish along the way, an extra life (obtainable by Monitor Boxes an
 </p>
 
 <br><CENTER>
-<IMG SRC="http://www.emulationzone.org/sonichq/images/son_knux.gif" ALT="Sonic And Hyper Knuckles" align="right">
+<IMG SRC="/sonichq/emuzone/images/son_knux.gif" ALT="Sonic And Hyper Knuckles" align="right">
 <P>
 <p>Not only do you have to beat the board, but usually there is an optional quest to obtain the Seven Chaos Emeralds - mysterious gems that turn thier user into something infinitely more powerful than they were before, and sometimes the real ending can ONLY be viewed with each one of these. The Special Stages are usually NEVER the same, always featuring some sort of difference. Usually located within each zone are access points to the Special Stages, either with Starposts and Dimensional Rings being the normalmode of transportation. After the initial zones, the game then advances to Robotnik's Strongholds (Egg Viper, Death Egg, Crystal Egg, Electric Egg - etc), that are usually twisting masses of metal that provide an even HARDER challenge. It is also during or before this time that special stages NO LONGER become accessible...After the fortresses/strongholds you then brace yorself for what will be either the final battle with the Doc or the beginning of the end of the storyline set forth in the game. Power rings become VERY low in abundance or non-existant, and if you didn't already obtain your super powers back in the easier levels, you really don't have a chance of getting them now...It is at this time that Robotnik brings out his most devastating mechs, assault vehicles, security systems and whatnot and tries to lay the smack down in one fell swoop. So naturally things get chaotic - Then, the game ends when the player wins the final battle against the Robotnik or whomever. But it is not TRULY over until you obtain all the Chaos Emeralds. Some zones are even "locked out" unless you find them all. </p> 
 
 <br>
-<IMG SRC="http://www.emulationzone.org/sonichq/images/double.jpg" ALT="Are You Up 2 It?..." align="center">
+<IMG SRC="/sonichq/emuzone/images/double.jpg" ALT="Are You Up 2 It?..." align="center">
 <P>
 
 <p>The 3D Sonic game environment was first fiddled with in the bonus stages for Sonic Triple Trouble and the latter Sonic Labyrinth - specifically the ones involving Tails' bi-plane, and basically EVERYTHING on Labyrinth. This was first achieved on the Sega Game Gear - The 8 Bit portable - which even though it did NOT generate true 3D environments, it certainly has a 3D feel to it. Unfortunately Sonic Labyrinth didn't deliver it all too well, but still has a nice play about it even though the game is technically the weakest of all the Sonic games in particular. Sonic 3D Blast for the Saturn is the first real Sonic 3D Game - utilizing the Sega Saturns' 32 bit processor. In this environment Sonic is allowed to roam around on a 3D plane and basically perform the same stunts listed above - except seeing them in all new 3D was an added twist. However Sonic's 3D movements still needed some tweaking, so this was perfected MUCH more in Sonic R. The drawback: Sonic was now extremely fast for the controller and it kind of takes a while to get USED to those controls. The process is supposedly perfected MUCH more in Sonic Adventure even though some have said he is STILL quite fast. But then again, he wouldn't be Sonic if he WEREN't fast, now would he? :o) 
@@ -52,7 +52,7 @@ Should Sonic perish along the way, an extra life (obtainable by Monitor Boxes an
 <p><p>Continue to the next page - if so, click on the picture to continue! If not, click the back button to return to the main menu.
 
 
-<p><A HREF="http://www.emulationzone.org/sonichq/games/gameplay/moves.html"><IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/wbksrelax.gif" ALT="Continue To The Next Page: Basic And Signature Moves !!!"></a>
+<p><A HREF="/sonichq/emuzone/games/gameplay/moves.html"><IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/wbksrelax.gif" ALT="Continue To The Next Page: Basic And Signature Moves !!!"></a>
 
 
 
