--- a/sonichq/emuzone/games/index/SonicR.html
+++ b/sonichq/emuzone/games/index/SonicR.html
@@ -3,15 +3,15 @@
 <title>Sonic HQ - The Games Page</title>
 </header>
 
-<body bgcolor="#00005a" background="http://www.emulationzone.org/sonichq/images/swirly.gif"
+<body bgcolor="#00005a" background="/sonichq/emuzone/images/swirly.gif"
  text="000066" link="#405961" vlink="#ff0000">
-<embed src="http://www.geocities.com/EnchantedForest/Dell/7835/srradicalcityjj.mid" autostart="true" hidden="true" loop="true">
+<embed src="/sonichq/geocities/EnchantedForest/Dell/7835/srradicalcityjj.mid" autostart="true" hidden="true" loop="true">
 
 <p><center> 
 <H2 ALIGN=CENTER><FONT COLOR="#000066">Sonic R</FONT></H2>
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<IMG SRC="http://www.geocities.com/EnchantedForest/Dell/6657/sonicr.gif">
+<IMG SRC="/sonichq/geocities/EnchantedForest/Dell/6657/sonicr.gif">
 </TD></TR></TABLE>
 
 <P ALIGN=CENTER>
@@ -30,19 +30,19 @@ Radiant Emerald Zone<BR>
 </P></center></font>
 <p>
 
-<p><Center><img src="http://www.geocities.com/EnchantedForest/Dell/7834/bluebar.jpg"></p></center>
+<p><Center><img src="/sonichq/geocities/EnchantedForest/Dell/7834/bluebar.jpg"></p></center>
 
 <CENTER><TABLE BORDER=3 COLS="2" WIDTH="100%" BGCOLOR="ccccff" TEXT="ccccff" >
 <TR><TD COLSPAN="2" WIDTH="50%"><CENTER><B>Sonic the Hedgehog Racing - Sega Saturn, PC Conversion</B></CENTER>
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/front2.gif">
+<IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/front2.gif">
 </TD></TR></TABLE>
 
-<p><b><FONT SIZE=2 FACE="COMIC SANS MS"><center>Game Codes And Strategy Guides Courtesy Of Jared Matte A.K.A. <A HREF="http://www.videogamers.com/ggibbon/index.htm">
+<p><b><FONT SIZE=2 FACE="COMIC SANS MS"><center>Game Codes And Strategy Guides Courtesy Of Jared Matte A.K.A. <A HREF="https://web.archive.org/20011101000000/http://www.videogamers.com/ggibbon/index.htm">
 The Green Gibbon
-</A>, <A HREF="http://www.gamesages.com/genesis/codes/index.html>Secrets Of The Game Sages</A> and <A HREF="http://www.fortunecity.com/underworld/lylat/295/sonic1.html">
+</A>, <A HREF="https://web.archive.org/20011101000000/http://www.gamesages.com/genesis/codes/index.html>Secrets Of The Game Sages</A> and <A HREF="https://web.archive.org/20011101000000/http://www.fortunecity.com/underworld/lylat/295/sonic1.html">
 Radical City
 </A></b>
 
@@ -70,7 +70,7 @@ Radical City
 
 
 <P>
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/sonic.gif" alt="Sonic" align=left><BR>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/sonic.gif" alt="Sonic" align=left><BR>
 <b>Racer #1: Sonic The Hedgehog<BR>
 <b>Species: Hedgehog<BR>
 <b>Sex: Male<BR>
@@ -86,7 +86,7 @@ Sonic is the fastest of all the racers. He’s so fast that he almost lifts off th
 
 <table border="0" cellspacing="0" cellpadding="8"> 
 <P>
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/Tails.jpg" alt="Tails" align=right><BR>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/Tails.jpg" alt="Tails" align=right><BR>
 <b>Racer #2:</b> Tails the Fox<BR>
 <b>Species:</b> Hedgehog<BR>
 <b>Sex:</b> Male<BR>
@@ -105,7 +105,7 @@ Tails is not as fast as Sonic, but he accelerates and corners well. Jump and gri
 
 
 <P>
-<center><img src="http://www.geocities.com/EnchantedForest/Dell/6657/amy1.gif" alt="Amy" align=left><BR>
+<center><img src="/sonichq/geocities/EnchantedForest/Dell/6657/amy1.gif" alt="Amy" align=left><BR>
 <b>Racer #3:</b> Amy Rose<BR>
 <b>Species:</b> Hedgehog<BR>
 <b>Sex:</b> Female<BR>
@@ -121,7 +121,7 @@ Maybe Amy’s car doesn’t have a very high top-speed, but there are some pretty wo
 <table border="0" cellspacing="0" cellpadding="8"> 
 
 <P>
-<center><img src="http://www.geocities.com/EnchantedForest/Tower/4309/Knuckles.jpg" alt="Knux" align=right><BR>
+<center><img src="/sonichq/geocities/EnchantedForest/Tower/4309/Knuckles.jpg" alt="Knux" align=right><BR>
 <b>Racer #4:</b> Knuckles The Echidna<BR>
 <b>Species:</b> Echidna<BR>
 <b>Sex:</b> Male<BR>
@@ -138,7 +138,7 @@ Knuckles is the overall well-balanced contestant in the race. His ability to sta
 
 
 <P>
-<center><img src="http://www.geocities.com/EnchantedForest/Dell/6657/robo1.gif" alt="Eggman" align=left><BR>
+<center><img src="/sonichq/geocities/EnchantedForest/Dell/6657/robo1.gif" alt="Eggman" align=left><BR>
 <b>Secret Racer #1:</b> Doctor Robotnik<BR>
 <b>Species:</b> Human<BR>
 <b>Sex:</b> Male<BR>
@@ -157,7 +157,7 @@ Robotnik has returned in his faithful Egg-O-Matic to even up the odds!!! The mac
 <table border="0" cellspacing="0" cellpadding="8"> 
 
 <P>
-<center><img src="http://www.geocities.com/EnchantedForest/Dell/6657/msonic.jpg" alt="Metal Sonic" align=right><BR>
+<center><img src="/sonichq/geocities/EnchantedForest/Dell/6657/msonic.jpg" alt="Metal Sonic" align=right><BR>
 <b>Secret Racer #2:</b> Metal Sonic<BR>
 <b>Species:</b> Badnik<BR>
 <b>Sex:</b> None<BR>
@@ -174,7 +174,7 @@ Metal Sonic has one edge that Sonic doesnt - the ability to hover. And this can 
 
 
 <P>
-<center><img src="http://www.geocities.com/EnchantedForest/Dell/6657/mtails.jpg" alt="Eggman" align=left><BR>
+<center><img src="/sonichq/geocities/EnchantedForest/Dell/6657/mtails.jpg" alt="Eggman" align=left><BR>
 <b>Secret Racer #3:</b> The Tails Doll<BR>
 <b>Species:</b> badnik<BR>
 <b>Sex:</b> ????<BR>
@@ -194,7 +194,7 @@ Possibly one of the creepiest of ANY Sonic characters, the Tails Doll does not r
 <table border="0" cellspacing="0" cellpadding="8"> 
 
 <P>
-<center><img src="http://www.geocities.com/EnchantedForest/Dell/6657/mknux.jpg" alt="Metal Knuckles" align=right><BR>
+<center><img src="/sonichq/geocities/EnchantedForest/Dell/6657/mknux.jpg" alt="Metal Knuckles" align=right><BR>
 <b>Secret Racer #4:</b> Metal Knuckles<BR>
 <b>Species:</b> Badnik<BR>
 <b>Sex:</b> None<BR>
@@ -211,7 +211,7 @@ Metal Knuckles can be considered as a balanced racer with a few more faults than
 
 
 <P>
-<center><img src="http://www.geocities.com/EnchantedForest/Dell/6657/erobo.jpg" alt="Eggman" align=left><BR>
+<center><img src="/sonichq/geocities/EnchantedForest/Dell/6657/erobo.jpg" alt="Eggman" align=left><BR>
 <b>Secret Racer #5:</b> The Egg Robo<BR>
 <b>Species:</b> badnik<BR>
 <b>Sex:</b> ????<BR>
@@ -228,7 +228,7 @@ Eggbots are strange, horrible racers...They posess SOME hover ability and missle
 <table border="0" cellspacing="0" cellpadding="8"> 
 
 <P>
-<center><img src="http://www.geocities.com/EnchantedForest/Dell/6657/ssonic.jpg" alt="Super Sonic !!!" align=right><BR>
+<center><img src="/sonichq/geocities/EnchantedForest/Dell/6657/ssonic.jpg" alt="Super Sonic !!!" align=right><BR>
 <b>Secret Racer #6:</b> Super Sonic<BR>
 <b>Species:</b> Hedgehog<BR>
 <b>Sex:</b> None<BR>
@@ -267,13 +267,13 @@ Emerald #7: Reactive Factory <BR>
 </TD></TR>
 <TR><TD COLSPAN="2" WIDTH="50%"><FONT SIZE=2 FACE="COMIC SANS MS"><CENTER>
 
-<p><img src="http://www.geocities.com/EnchantedForest/Dell/7834/bluebar.jpg"></p>
+<p><img src="/sonichq/geocities/EnchantedForest/Dell/7834/bluebar.jpg"></p>
 <B><p>Resort Island Zone</p>
 
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/track_1.jpg">
+<IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/track_1.jpg">
 </TD></TR></TABLE>
 
 <P ALIGN=CENTER>
@@ -289,11 +289,11 @@ Token #3; In a 20 ring tunnel at the right of the entrance to the ruins bit.<BR>
 Token #4; On a solitary island right of the hairpin turn.<BR>
 Token #5; Just before the loop there is a split in the track. Take the left (longest) route here.<BR>
 
-<p><b>Radical City Zone</p></b><p><img src="http://www.geocities.com/EnchantedForest/Dell/7834/bluebar.jpg"></p>
+<p><b>Radical City Zone</p></b><p><img src="/sonichq/geocities/EnchantedForest/Dell/7834/bluebar.jpg"></p>
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/track_2.jpg">
+<IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/track_2.jpg">
 </TD></TR></TABLE>
 
 <P ALIGN=CENTER>
@@ -311,12 +311,12 @@ the huge pinball table.<BR>
 Token #5; Just before the speed up, there is a 20 ring passage to the 
 right. As well as hiding a coin, this is an excellent shortcut.<BR>
 
-<p><img src="http://www.geocities.com/EnchantedForest/Dell/7834/bluebar.jpg"></p><p><b>Regal Ruin Zone</p></b>
+<p><img src="/sonichq/geocities/EnchantedForest/Dell/7834/bluebar.jpg"></p><p><b>Regal Ruin Zone</p></b>
 
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/track_3.jpg">
+<IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/track_3.jpg">
 </TD></TR></TABLE>
 
 <P ALIGN=CENTER>
@@ -333,12 +333,12 @@ You should see it.<BR>
 Token #5; At the right of the slope mentioned for the 2nd coin. Go up 
 some stairs and follow the path around.<BR>
 
-<p><img src="http://www.geocities.com/EnchantedForest/Dell/7834/bluebar.jpg"></p>
+<p><img src="/sonichq/geocities/EnchantedForest/Dell/7834/bluebar.jpg"></p>
 <p><b>Reactive Factory Zone</p></b>
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/track_4.jpg">
+<IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/track_4.jpg">
 </TD></TR></TABLE>
 
 <P ALIGN=CENTER>
@@ -359,13 +359,13 @@ Token #5; Near the end of the track (If you stick to the track proper -
 the topmost routes) There is a 20 ring entry to the right of the 
 track. It's here.<BR>
 
-<p><img src="http://www.geocities.com/EnchantedForest/Dell/7834/bluebar.jpg"></p>
+<p><img src="/sonichq/geocities/EnchantedForest/Dell/7834/bluebar.jpg"></p>
 <p><b>Radiant Emerald Zone</p></b>
 
 
 <TABLE ALIGN=CENTER BORDER=5 CELLSPACING=2 CELLPADDING=2>
 <TR ALIGN=CENTER><TD>
-<IMG SRC="http://www.geocities.com/EnchantedForest/Tower/4309/sat_sonicr_screenshot05.jpg">
+<IMG SRC="/sonichq/geocities/EnchantedForest/Tower/4309/sat_sonicr_screenshot05.jpg">
 </TD></TR></TABLE>
 
 <P ALIGN=CENTER>
