--- a/sonichq/emuzone/main/updateboard.htm
+++ b/sonichq/emuzone/main/updateboard.htm
@@ -9,7 +9,7 @@
 <!-- a:hover {  text-decoration: underline} -->
 <!-- A{text-decoration:none} -->
 </style>
-<base href=http://www.emulationzone.org/sonichq/>
+<base href=/sonichq/emuzone/>
 </head>
 
 <body text="#000000" bgcolor="#FFFFFF" link="#FFA500" vlink="#ffa500" background="images/backgrounds/TailsGrayBG.gif">
@@ -32,7 +32,7 @@
 <b><font face=Arial color=ffffff>Welcome!</b>
 </td></table>
 
-<img src="http://www.emulationzone.org/sonichq/s&a.jpg" align=right>
+<img src="/sonichq/emuzone/s&a.jpg" align=right>
 
 <blockquote><br><font face="Arial"><font size=-1>Welcome to our update board! You'll be notified on our front page if anything new pops up here!<br>
 This board is for various HQ announcements and updates.  Not all updates are listed here - that's what the dates on the main page are for.  However, when an update requieres additional explanation, you can find it here.<br>
@@ -40,7 +40,7 @@ Thanks for your patience!<br><br>
 ***NOTE TO HQ MEMBERS!*** Don't forget to notify on the front page if the board has been updated! Thanks!
 </blockquote>
 <center><b><p><a href=updates-june.htm>June Updates</a><br>
-<p><a href="http://sonichq.cjb.net/" target="_top"><font face=arial>Return To The Main Page?</a></b></center>
+<p><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/" target="_top"><font face=arial>Return To The Main Page?</a></b></center>
 <br clear=right>
 
 <font face=Arial size=-1>
